--- a/article/sg0/doc/0000.md
+++ b/article/sg0/doc/0000.md
@@ -89,7 +89,7 @@
  真由喜会一直在你身边的，冈伦。”  
 不知是不是因为真由理温柔的话语，我的眼泪终于肆意涌了出来。我下定决心，要忘记这一切。  
 
-所以从那天起，我就再也没有去过 LAB——未来装置研究所。  
+所以从那天起，我就再也没有去过 LAB——未来道具研究所。  
 
 
 <br/>
