--- a/article/sg0/doc/0036.md
+++ b/article/sg0/doc/0036.md
@@ -1,6 +1,6 @@
 # 永劫回归的潘多拉 - 09α
 > 1.129954  
-> [ 2011/01/23 - 01/26 ] 接 0035 - 接起电话。发现并躲开黑衣人。事后在菲莉丝住所，冈伦与真帆交流《中钵论文》的红莉栖原稿与『Amadeus』军用化情况。真帆和教授回国，继续让冈伦担任测试员。  
+> [ 2011/01/23 - 01/26 ] 接 0035 - 接起电话。发现并躲开黑衣人。事后在菲莉丝住所，冈伦与真帆交流《中钵论文》的红莉栖原稿与『Amadeus』军用化情况。雷斯吉宁教授和真帆回到美国，冈伦的测试员权限继续保留。  
 
 | [←prev](./0035) | [menu](../) | [next→](./0037) |
 
@@ -52,7 +52,7 @@
 
 [真帆视角]
 
-比屋定被冈部带到了菲莉丝的家，坐落于秋叶原中心的某个高层大厦的最顶层，比起 cosplay 商店的老式建筑，安全性肯定是上升了几个档次。菲莉丝愉快地招待了二人，并提供了床铺和食物。而桥田至为了和铃羽碰面，一个人回了未来装置研究所。  
+比屋定被冈部带到了菲莉丝的家，坐落于秋叶原中心的某个高层大厦的最顶层，比起 cosplay 商店的老式建筑，安全性肯定是上升了几个档次。菲莉丝愉快地招待了二人，并提供了床铺和食物。而桥田至为了和铃羽碰面，一个人回了未来道具研究所。  
 “这个笔记本电脑，只是存在本身就会招来灾祸，舍弃它可能比较好。”  
 状况稳定下来之后，冈部开始讨论起关于处理红莉栖的笔记本电脑和硬盘的问题。他的意见十分坚定，虽然平常的他都是那种会待在某处，不愿太过强调自身主张的类型，但是对于这件事他却显得十分顽固。但是，比屋定也是一样的顽固。  
 “我想至少应该解锁之后确认下里面的内容吧，虽说以现况看来这个还做不到……”  
@@ -130,7 +130,7 @@
  之后的就交给警察吧。”  
 自从办公室被洗劫，已经过了两天。比屋定前天和昨天都是在菲莉丝家度过的，今天和雷斯吉宁教授取得联络，所以来和光市取行李。明天就和一开始预定的那样，准备回国，因此也要和这个办公室说再见了。  
 “犯人好像还没抓到吧？”  
-“啊。自从来了日本，灾难就不停啊。”  
+“啊，自从来了日本，灾难就不停啊。”  
 “是呢……”  
 两个人环视着已经空空如也的办公室。不管怎么说也是不得安宁的两个月啊。  
 “*Maho* 觉得怎么样呢？毕竟日本也是你的另一个故乡吧？感想如何？”  
