--- a/article/sg0/doc/0059.md
+++ b/article/sg0/doc/0059.md
@@ -26,14 +26,14 @@
 “哈哈哈，和 *America* 的食物比起来，这可是相当健康的。  
  再说，关于吃饭这一点，我可不想被 *Maho* 说教呢。”  
 “唔……”  
-确实，真帆自己也不怎么均衡饮食。不如说很多时候都靠谷物食品和营养剂，是非常不健康的饮食生活。  
+确实，真帆自己也不怎么均衡饮食。不如说很多时候都靠谷物食品和营养剂，是非常不健康的饮食方式。  
 “话说，你想要找专业人士拜托什么？”  
-“啊……那个是……没什么，没什么啦。”  
-让雷斯吉宁教授知道这事也没有什么不妥，但是鬼使神差地真帆还是糊弄了过去。  
+“啊……那个……没什么，没什么啦。”  
+让雷斯吉宁教授知道这事也没有什么不妥，但是鬼使神差地，真帆还是选择糊弄过去。  
 “是吗？如果有我能帮忙的事一定要跟我说哟。”  
-“非常感谢。真到那时候就拜托您了。”  
+“非常感谢，真到那时候就拜托您了。”  
 真帆边说着社交辞令，边站起来向门口走去。  
-“*Maho*？你要去哪？”  
+“*Maho*，你要去哪？”  
 “想着去秋叶原一趟转换下心情。”  
 “以转换心情来说，走得还真远呢。”  
 “唔……”  
@@ -41,7 +41,7 @@
 “不，不是这样的……！”  
 “难道不是吗？”  
 “顺便……路过的时候去见见也不是不行……”  
-冈部在秋叶原建立了一间 LABoratory，这是昨天晚上“红莉栖”告诉真帆的。之前他好像在刻意远离 LAB，最近又开始出入那里。对于这间 LAB，真帆稍微有点感兴趣。  
+冈部在秋叶原建立了一间 LAB，这是昨天晚上“红莉栖”告诉真帆的。之前他好像在刻意远离 LAB，最近又开始出入那里。对于这间 LAB，真帆稍微有点感兴趣。  
 “哼\~\~？”  
 “先、先声明一下，不是这样的呢！并不是你说的那样呢！”  
 “我还什么都没说呢？”  
@@ -53,9 +53,9 @@
 最主要的，真帆想要拜访冈部所在的地方并不是因为想要见他。她想要与冈部再当面谈一次，获取些与红莉栖的笔记本电脑密码有关的线索。虽然冈部说不知道，但是真帆认为比起自己的瞎猜，他肯定知道的要多得多。那是从冈部对『Amadeus』的态度上看出来的，也可以说是女人的直觉。  
 思考着这些事情，真帆换乘电车，从秋叶原车站检票处出来了。这时候——  
 “嗯……？”  
-真帆感觉到被谁盯着，回过了头。明明是平常时段，车站却人烟混杂。但是在那些人中没有找到真帆所感觉到的人。  
-“……错觉……吧。”  
-真帆一个人嘟囔着，再次迈出了脚步。【未来装置研究所】的地址从“红莉栖”那里得知了。虽然对秋叶原的地理位置不是那么熟，不过到了万不得已的时候只要让“红莉栖”当向导就行了。只是，突然到访的话，冈部如果不在该怎么办呢？虽然有些不安，不过如果真是那样就乖乖回去罢了。  
+真帆感觉到被谁盯着，回过头查看。明明是平常时段，车站却人烟混杂，但是没有发现可疑的人。  
+“……错觉……吗？”  
+真帆一个人嘟囔着，再次迈出脚步。从“红莉栖”那里得知了【未来道具研究所】的地址。虽然对秋叶原的地理位置不是那么熟，不过到了万不得已的时候只要让“红莉栖”当向导就行了。只是，突然到访的话，冈部如果不在该怎么办呢？虽然有些不安，不过如果真是那样就乖乖回去罢了。  
 走马观花地扫过各式各样店铺陈列出来的商品，就这样走了一段时间——  
 “……”  
 果然，感觉到了谁的目光。但是，回头一看也没发现可疑的人。  
@@ -73,7 +73,7 @@
 “喂，冈部先生！？我是比屋定！我现在就在你的 LAB 的附近——！”  
 但是，真帆没机会说出更多的话来。感觉到有人从背后紧紧环抱住她的同时，手机从手中掉了下去。  
 
-【（冈伦视角）LAB·未来装置研究所】
+【（冈伦视角）LAB·未来道具研究所】
 
 “这个是……？”  
 我接过默不出声的桐生萌郁递过来的纸张，提出询问。  
