--- a/article/sg0/doc/0071.md
+++ b/article/sg0/doc/0071.md
@@ -9,7 +9,7 @@
 ![](../static/image/0071-1.png)
 
 漆原琉华很悲伤。很久很久以来一直很悲伤。  
-从结识了冈部伦太郎，关系变得像这样亲密起来，像这样进出未来装置研究所开始，就这样过去了很久。从同为校友的椎名真由理开始，桥田至，还有其他的成员也都开始把自己视为友人。这件事本身很让人高兴。大家愿意接纳没有长处、畏首畏尾的自己——对于这一点，琉华是非常感激的。尽管如此，琉华却一直抱有着一种疏远感——只有自己一人像是局外人那样。大家都在向自己隐瞒着什么，这点琉华能够察觉。正因如此才会悲伤。但是，更悲伤的是，明白了这些，自己却无法将“请告诉我”这句话说出来。  
+从结识了冈部伦太郎，关系变得像这样亲密起来，像这样进出未来道具研究所开始，就这样过去了很久。从同为校友的椎名真由理开始，桥田至，还有其他的成员也都开始把自己视为友人。这件事本身很让人高兴。大家愿意接纳没有长处、畏首畏尾的自己——对于这一点，琉华是非常感激的。尽管如此，琉华却一直抱有着一种疏远感——只有自己一人像是局外人那样。大家都在向自己隐瞒着什么，这点琉华能够察觉。正因如此才会悲伤。但是，更悲伤的是，明白了这些，自己却无法将“请告诉我”这句话说出来。  
 “睡不着吗？”  
 “……阿万音小姐也是，还醒着呢？”  
 “有好多事情要考虑呢。”  
