--- a/article/sg0/doc/0095.md
+++ b/article/sg0/doc/0095.md
@@ -18,7 +18,7 @@
 
 ![](../static/image/0095-1.png)
 
-——电话微波炉（暂定）。曾经我们在这里制造的，未来装置 8 号机。也是改变了我的——不，是改变了世界的命运的机器。  
+——电话微波炉（暂定）。曾经我们在这里制造的，未来道具 8 号机。也是改变了我的——不，是改变了世界的命运的机器。  
 “为什么？这东西不是已经被破坏了吗？”  
 “……嗯嗯，已经破坏了。  
  这是我重新制造的，说起来应该叫『电话微波炉改』呢\~  
