--- a/article/sg0/doc/0138.md
+++ b/article/sg0/doc/0138.md
@@ -5,7 +5,7 @@
 | [←prev](./0137) | [menu](../) | [next→](./0139) |
 
 ---
-那场骚动之后过了快一年，真帆久违地来到了未来装置研究所。  
+那场骚动之后过了快一年，真帆久违地来到了未来道具研究所。  
 桶子：“哦？来了来了。”  
 真帆：“好久不见了，各位。”  
 真由理：“哇，是真帆小姐啊。我好想你啊\~嘟嘟噜\~♪”  
