--- a/article/sg0/doc/0140.md
+++ b/article/sg0/doc/0140.md
@@ -1,6 +1,6 @@
 # 永劫回归的潘多拉 - 09β
 > 1.129954  
-> [ 2011/01/23 ] 接 0035 - 先谈事情。冈伦和桶子决定把所有事情告知比屋定，并且说服了她同意破坏红莉栖的笔记本电脑和硬盘。  
+> [ 2011/01/23 ] 接 0035 - 先谈事情。冈伦和桶子决定把所有事情告知真帆，并且说服了她同意破坏红莉栖的笔记本电脑和硬盘。  
 
 | [←prev](./0035) | [menu](../) | [next→](./0141) |
 
