--- a/article/sg0/doc/0141.md
+++ b/article/sg0/doc/0141.md
@@ -43,7 +43,7 @@
 
 ![](../static/image/0141-3.png)
 
-“……不要出声，照我说的做。否则……她会没命。”  
+“……不要出声，照我说的做，否则……会没命。”  
 穿黑色骑手装的女人左手控制着比屋定，右手拿出了军用匕首，把它抵在比屋定的脖子上。她的声音，即使因为头盔变得十分沉闷，我也很熟悉。  
 “住——住手！”  
 我的脑海中，一段令我毛骨悚然的可怕记忆苏醒了。“椎名真由理，不需要。” ——虽然那是发生在其它世界线的事，但是，曾经夺走我最重要的青梅竹马的那个冷血的声音，如今，又再度出现在这里。  
@@ -117,9 +117,9 @@
 ![](../static/image/0141-5.png)
 
 只有那个按住我的那个男人反应迟了一步。刺耳的枪声响起，用刀子抵着我的男人，脑袋和头盔一起被贯穿了。受此波及，我也倒在地上，由于冲撞，扔出了手中桶子的登山包。一名 Rounder 立刻冲过去捡起，然后朝远离面包车的方向跑去。一名看起来像是指挥官的男人从面包车上下来，大喊了一声什么，貌似是用俄语下达了指令。于是士兵们举枪瞄准了逃跑中的 Rounder 的后背，下一刻，他的身体飞了出去，连同手上的登山包一起被撕裂了。登山包被打碎，或完好或破碎的物品散落在柏油路上。然而还不够，子弹如雨一般，偏执地倾泻在目之所及的一切物品上，直到将所有东西被粉碎成难以分辨的残骸。我没空管这些，爬到电线杆的阴影中隐蔽起来。  
-数息之后，枪声停止了。我环顾四周，操着俄语的士兵逼近过来。不知什么时候，以桐生萌郁为首的那群 Rounder 已经不见了，只留下两具尸体。士兵们训练有素分工有序，有人警戒周边的情况，有人回收笔记本电脑和硬盘的残骸，有人抱起 Rounder 的两具尸体，迅速打扫了战场回到面包车上。他们一眼都没看我们。从面包车出现到离开，不过短短几分钟。路上只剩下滚落的微小碎片、两摊血迹，还有趴在路上颤抖的比屋定、建筑物的阴影中吓呆了的桶子和电线杆下泄了气的我。我的心脏一直砰砰响着，事情结束之后，才发觉脖子的疼痛，好像是倒下的时候，被抵在脖子上的匕首稍微割到了。  
+数息之后，枪声停止了。我环顾四周，操着俄语的士兵逼近过来。不知什么时候，以桐生萌郁为首的那群 Rounder 已经不见了，只留下两具尸体。士兵们训练有素分工有序，有人警戒周边的情况，有人回收笔记本电脑和硬盘的残骸，有人抱起 Rounder 的两具尸体，迅速打扫完战场回到面包车上，过程中完全无视了我们。从面包车出现到离开，不过短短几分钟。路上只剩下滚落的微小碎片、两摊血迹，还有趴在路上颤抖的比屋定、建筑物的阴影中吓呆了的桶子和电线杆下泄了气的我。我的心脏一直砰砰响着，事情结束之后，才发觉脖子的疼痛，好像是倒下的时候，被抵在脖子上的匕首稍微割到了。  
 
-过了一会儿，终于从远处传来了警车的警笛声。这时我才终于想起，这里是日本的秋叶原。第三次世界大战，也许已经在我们不知道的地方开始了。我再次体会到，在国家争斗面前，我们果然如蝼蚁一般无力。  
+过了一会儿，终于从远处传来了警笛声。这时我才终于想起，这里是日本的秋叶原。第三次世界大战，也许已经在我们不知道的地方开始了。我再次体会到，在国家争斗面前，我们果然如蝼蚁一般无力。  
 
 
 <br/>
