--- a/article/sg0/doc/0144.md
+++ b/article/sg0/doc/0144.md
@@ -9,17 +9,17 @@
 接下来的几天里，我和比屋定都在菲莉丝家受其照顾。由于红莉栖的笔记本电脑和硬盘已经不存在了，所以我们今后被盯上的可能性降低了，但也并不是零。以防万一，还是不要靠近 LAB 了。  
 
 “*Maho! Rintaro!*”  
-“许久不见的雷斯吉宁教授，看起来有些憔悴。  
+许久不见的雷斯吉宁教授，看起来有些憔悴。  
 “教授，太好了，你没事……”  
 “*Maho*，你也辛苦了。”  
-“雷斯吉宁教授用巨大的身体抱紧了小小的比屋定。由于体型相差太多，比屋定看起来就像一个布娃娃。  
-“教授、难受……好难受……”  
-今天是雷斯吉宁教授和比屋定回国的日子，由于是工作日的白天，所以来机场送行的只有我。与其说是送行，不如说是我带比屋定过来和教授会合。因为比屋定连独自来机场都无法做到，生活能力这么差居然也能活到这个岁数。顺便一提，比屋定的欢送会昨天晚上在菲莉丝家已经开过了。不只是菲莉丝，真由理和桶子，还有参加了圣诞节派对的人也都来了，大家都很舍不得分别。  
+雷斯吉宁教授用巨大的身体抱紧了小小的比屋定。由于体型相差太多，比屋定看起来就像一个布娃娃。  
+“教授，难受……好难受……”  
+今天是雷斯吉宁教授和比屋定回国的日子，由于是工作日的白天，所以来机场送行的只有我。与其说是送行，不如说是我带比屋定过来和教授会合。因为比屋定连独自来机场都无法做到，生活能力这么差居然也能活到这个岁数。顺便一提，比屋定的欢送会昨天晚上在菲莉丝家已经开过了。不只是菲莉丝，真由理和桶子，还有参加了圣诞节派对的人都来了，大家都很舍不得分别。  
 “*Rintaro*，谢谢你一直陪着 *Maho*，真的麻烦你了。”  
 “没事。”  
 “还有，你什么时候来我们的研究室呢？”  
 “诶？这个……”  
-原来他不是在开玩笑啊……  
+原来他之前说的不是在开玩笑啊……  
 “为了能够早点过去，我会努力学习的。到那时我可以联系您吗？”  
 “当然了！不论何时我都等着你！”  
 雷斯吉宁教授笑着握住我的手。他的话，真的让我很感动。接触过『Amadeus』，我前往维克多·孔多利亚大学的实现梦想的念头，越来越强烈了。  
