--- a/article/sg0/doc/0038.md
+++ b/article/sg0/doc/0038.md
@@ -1,17 +1,17 @@
 # 私秘境里的污点 - 02
 > 1.129954  
-> [ 2011/06/25 ] 与真由理逛商场，送给她森之妖精乌帕。  
+> [ 2011/06/25 ] 与真由理逛商场，送给她绿之妖精乌帕。  
 
 | [←prev](./0037) | [menu](../) | [next→](./0039) |
 
 ---
 
-马上就要进入 7 月了，今年可能是干黄梅，东京至今还没有梅雨的迹象，却已经呈现出了梅雨期后的天气。不如说，气温早就已经进入夏天了。  
+马上就要进入 7 月了。今年的东京可能是干黄梅，至今还没有梅雨的迹象，却已经呈现出了梅雨期后的天气。从气温上讲，早就已经进入夏天了。  
 （夏天啊……）  
-也就是说……那件事之后，已经快要一年了。  
-这是个周六的午后。家里不仅酷暑难当，还被老爸唠叨着帮忙生意，于是我就来到了池袋车站附近。一年前的话，还有 LAB 这个落脚处，现在因为铃羽住在那儿，就尽量不过去了。但是这样一来，休息日适合学习的地方就不怎么好找了。去大学也嫌麻烦，休息日教室估计也不开放。经过种种考量，决定在离老家较近的一间咖啡店坐几个小时。实际上，这种咖啡店里，和我一样一杯咖啡坐几个小时的人非常多，有的带来了笔记本电脑，有的在读书。我说不定也加入了这些现充的行列了……不由得心中苦笑。  
-正在咖啡店里看书的时候，手机响起了 RINE 的消息提示音。  
+也就是说……那个事件，已经快要过去一年了。  
+这是个周六的午后。家里不仅闷热难当，还被老爸唠叨着帮忙店里的生意，于是我来到了池袋车站附近。如果是在一年前，还有 LAB 这个落脚处，现在因为铃羽住在那儿，就尽量不过去了。但是这样一来，休息日适合学习的地方，就不怎么好找了。去大学也嫌麻烦，休息日估计教室也不开放。经过种种考量，我最终决定，在离家较近的这间咖啡店坐几个小时。实际上，这种咖啡店里，像我这种点一杯咖啡坐几个小时的人非常多，有的带来了笔记本电脑，有的在读书。我说不定也加入了这些现充的行列了……不由得心中苦笑。  
 
+正在咖啡店里看书的时候，手机响起了 RINE 的消息提示音。  
 『嘟嘟噜\~♪现在在哪？』  
 「![](../static/image/emoji/okarin-hecha.png)」  
 『啊，老地方的咖啡店啊』  
@@ -23,9 +23,10 @@
 『![](../static/image/emoji/faris-thanks.png)』  
 『那我现在就过去，在那等我哦』  
 
-那家伙，去过我家了啊……我的老家【冈部青果店】，位于一条古老的商业街中，建成差不多有 40 年了，残破得很，是时候该重新装修一下了。  
-“呼……”  
-注意力没法集中了，还有不到 15 分钟真由理就到了，今天就学习就到这吧。上午把该读的都读过了，嗯，也算是可以吧。我都有些吃惊于自己最近的专注度，因为有了目标，简直干劲满满，我必须尽早达到去维克多·孔多利亚大学的条件。  
+（那家伙，去过我家了啊……）  
+我家的【冈部青果店】，位于一条古老的商业街中，建成差不多有 40 年了，残破得很，是时候该重新装修一下了。  
+注意力没法集中了，还有不到 15 分钟真由理就到了，今天的学习就到这吧。上午把该读的都读过了，嗯，也算是可以吧。我都有些吃惊于自己最近的专注度，因为有了目标，简直干劲满满，我必须尽早达到去维克多·孔多利亚大学的条件。  
+
 （维克多·孔多利亚大学啊……）  
 我和比屋定有定期互发邮件和 RINE。她好像每天都在夜以继日地研究，总是一副睡眠不足的样子。  
 
@@ -51,15 +52,15 @@
 “啊，等——”  
 我挂断了电话。“红莉栖”说起话来总是很长时间都说不完的样子。的确本体也是滔滔不绝的性格。在这种地方和她对话，我会太在意周围的目光，感觉很不自在。我也提议过因为看着屏幕说话太羞耻，想要变成和平常打电话一样的形式来交谈。但是这样“红莉栖”就有意见了——为什么我要可悲地一边看着你的脑袋一边说话？真是个任性的程序，真是的……  
 
-与真由理汇合后来到了 HANDS（东京手创馆）。进到空调十足的店里，有重生的感觉。才 6 月就这种热度，真不知道到了 7、8 月份该怎么办。  
+我和真由理来到了 HANDS（东京手创馆）。进到空调十足的店里，有种满血复活的感觉。这才 6 月份就热成这样，真不知道到了 7、8 月份该怎么办。  
 “那么，到底要买些什么东西？”  
 “那个，要做宣传商品用的 POP，所以，要买用到的卡片啊、荧光笔之类的。”  
 “今年准备在漫展出同人本吗？”  
 “不是的，是用在【冈部青果店】的哟\~”  
 “啊？你说什么……？”  
-我的老家？  
+我家的店？  
 “今天，去冈伦家的时候，和叔叔谈到了这件事。  
-“‘那么就让真由喜来做！’——这样提案了。”  
+ ‘那么就让真由喜来做！’——这样提案了。”  
 “喂喂……”  
 老爸那家伙，真是厚脸皮啊。  
 “你没有必要做这事哦。”  
@@ -71,22 +72,24 @@
 
 ![](../static/image/0038-1.png)  
 
-大致地转了一圈卖场，用于 POP 的材料种类相当的多。我尽量不出声，让真由理按自己的品味选择。真由理花了相当长的时间，仔细地斟酌着该买哪个好。只是，因为平时在 *MayQueen+Nyan²* 待久了的原因吗？真由理的品味该怎么说呢……偏向于萌系的方向。交给真由理应该没什么危险吧……尽管这么说，被拜托的是真由理，所以我出手干涉也不对吧。这里就放开胸襟，全部交给真由理吧。因此，我就在卖场随便地转悠着等待真由理买完东西……这时又接到了“红莉栖”的电话。  
+大致转了一圈卖场，用于 POP 的材料种类相当多。我尽量不发表意见，让真由理按自己的品味选择。真由理花了相当长的时间，仔细地斟酌着该买哪个好。只是，是因为平时在 *MayQueen+Nyan²* 待久了的原因吗？真由理的品味该怎么说呢……偏向于萌系的方向。  
+交给真由理应该没什么危险吧……尽管这么说，被拜托的是真由理，所以我也不好干涉。这里就放宽心，全部交给真由理吧。因此，我就在卖场随便转悠着，等待真由理买完东西。  
+这时又接到了“红莉栖”的电话。  
 “怎么了吗？”  
 “难道说在买东西？”  
 “嗯，和真由理一起。”  
 “诶\~约会？”  
-“sweet(笑)”  
+“sweets(笑)”  
 “都说过不要用这种说法了。”  
 “那么，你也改改你恋爱脑的习惯吧。”  
 “是是是，我知道了啦。  
  但是，真由理真是可爱呢。  
- 居然有那么可爱的比你小的青梅竹马，你真是有福气啊。”  
+ 居然有那么可爱的年下的青梅竹马，你真有福气啊。”  
 “是啊。”  
-“这么一来，真帆前辈的胜算不是绝望性的么……  
- 又不可爱，年龄上也赢不过，身高更不用说，还有胸围方面的也是惨败……  
+“这么一来，真帆前辈的胜算真是绝望性的啊……  
+ 又不可爱，年龄上也赢不过，身高更不用说，还有胸围方面也是惨败……  
  呜，可怜的前辈……”  
-“这些话在比屋定的面前说的话，她会把整个程序都删除掉的吧。”  
+“这些话在比屋定面前说的话，她会把你整个程序都删除掉的吧。”  
 “话说，我，至今都没有被介绍给真由理呢。  
  你这人，朋友明明挺多的，但是跟谁都没有提过我的事呢。”  
 “有类似保密义务的，被要求过尽量不要告诉别人。”  
@@ -94,7 +97,7 @@
 “……没有那种事。无论如何都希望被介绍的话，我就向比屋定征求下许可吧。  
  然后首先，就把我最信赖的男人——桶子介绍给你。  
  如果是那家伙，应该会对你相当执着的吧。”  
-“24 小时一直被工口的目光注视着然后不停的被哈哈着么我懂的……  
+“24 小时一直被工口的目光注视着然后不停的被哈哈着吗我懂的……  
  HENTAI 真是可怕……”  
 “红莉栖”脸色一青，伴随着失去任何感情波动的话语颤抖了起来。  
 桶子是怎样的人，我不厌其烦地灌输给了“红莉栖”，所以她应该能轻易想象出，被交到那个人手上的瞬间，自己会被如何当成玩物的吧。  
@@ -110,65 +113,70 @@
 ……虽然我也觉得“红莉栖”的事没有必要这样拼命地隐藏，另一方面，又觉得唯独还是不要让真由理知道比较好。因为，起码她知道我去年的夏天没能拯救牧濑红莉栖的事。  
 “那么，要买的东西确定了吗？”  
 “啊，嗯！这种感觉的怎么样？”  
-购物篮里面，放着大量的心形或星形的 POP 纸。这些……与我老家店铺的氛围，致命地不合适的感觉……但是，这也是一开始就肯定会变成这样的——毕竟我全部交给真由理的品味了。之后可能会被老爸发一通牢骚，但是不关我的事，拜托真由理的不是我，而是老爸。因此，我什么意见也没说就去结账了。因为是周六，收银台附近等待结账的客人堆得满了出来，会很费时间的样子，我就让真由理到别的楼层的动漫周边卖场去等了，那里会有真由理喜欢的《雷 NET 翔》的周边商品出售。真由理不好意思地按我说的去了。  
+购物篮里面，放着大量的心形还有星形的卡片。这些……与我家店铺的氛围，致命地不合适的感觉……但是，这也是一开始就能预想到会变成这样的——毕竟我全部交给真由理的品味了。之后可能会被老爸发一通牢骚，但是不关我的事，拜托真由理的不是我，而是老爸。因此，我什么意见也没说就去结账了。  
+因为是周六，收银台附近等待结账的客人堆得满了出来。感觉要排很久的样子，我就让真由理到别的楼层的动漫周边卖场去等我，那里会有真由理喜欢的《雷 NET 翔》的周边商品出售。真由理不好意思地按我说的去了。  
+
 结果，结账花了 15 分钟。同时我为表歉意许下的送礼物的约定也兑现了。  
-“诶嘿嘿\~\~”  
-真由理一副高兴至极的样子注视着手上的钥匙圈。  
+“诶嘿嘿\~\~♪”  
+真由理高兴至极地注视着手上的钥匙圈。  
 
 ![](../static/image/0038-2.png)
 
 这是《雷 NET 翔》中登场的吉祥物角色“乌帕”。我让真由理在动漫周边卖场等待的时候随便选个喜欢的东西，于是她拿了这个。  
-“乌帕的话，明明已经有了很多了……还是这么高兴啊。  
- 而且，这只是普通的绿色乌帕吧？不是稀有的那种啊。  
+“乌帕的话，明明已经有很多了……还会这么高兴啊？  
+ 而且，这只是普通的绿色乌帕吧，不是稀有的那种啊？  
  稀有的貌似是……金属乌帕来着？”  
-全身闪烁银色光辉的金属乌帕，在乌帕之中也算人气很高，作为商品的稀有度也很高。比方说的话，以便利店的商品抽签来说，金属乌帕肯定相当于特等奖。据说在网上拍卖的话能值好几万，之前听真由理说过的。  
+全身闪烁银色光辉的金属乌帕，在乌帕之中人气很高，作为商品的稀有度也很高。如果作为便利店的抽奖奖品，金属乌帕肯定是特等奖。之前也听真由理说过，在网上拍卖应该能值好几万。  
 “不，不，不——”  
-真由理不知为何显得很得意的样子，左右摇动着食指。  
-“不是的哦\~这个啊，虽然是绿色的乌帕先生，但是和普通的不一样的！  
- 是在之前放映的电影中登场的‘森之妖精先生乌帕’哟！”  
-说起来，《雷 NET 翔》的剧场版在春季上映了呢。真由理也混在小孩子当中去看了吧？  
-“森之妖精先生？”  
-“剧透电影的情节也没关系吧？”  
+真由理不知为何露出得意洋洋的表情，左右摇动着食指。  
+“不是的哦\~这个啊，虽然是绿色的乌帕先生，但是和普通的不一样哦！  
+ 这是在之前放映的电影中登场的‘绿之妖精先生乌帕’哟！”  
+说起来，《雷 NET 翔》的剧场版在春季上映了呢，看来真由理也混在小孩子当中去看了。  
+“绿之妖精先生？”  
+“剧透电影的情节没关系吧？”  
 “没事，反正不会看的。”  
-“那个，这次的电影啊，是在虚拟世界中与邪恶的超级黑客先生们战斗。  
+“那个，这次的电影啊，是在虚拟世界中与邪恶的超级黑客先生战斗。  
  那个虚拟世界啊，就是妖精先生住的森林。  
  超级黑客先生特别强呢，翔君和乌帕们都陷入了危机……  
- ‘已经不行了\~！’的时候，妖精先生们前来帮忙了呢。
- 其实，那些妖精先生们，是翔君在照顾的学校花坛的花儿们哦\~
- 为了拯救一直都温柔地照顾它们的翔君，  
- 在虚拟世界‘皮卡皮卡\~’地放着光与乌帕合体了！
- 那就是这个‘森之妖精先生乌帕’！超级可爱，超级强大的哟\~
- 真由喜好感动啊\~对这类剧情没辙呢\~导演先生真是天才啊\~”
+ ‘已经要不行了\~！’的时候，妖精先生们前来帮忙了呢。  
+ 其实，那些妖精先生们，就是翔君在照顾的学校花坛的花儿们哦\~  
+ 为了拯救一直都温柔地照顾它们的翔君来到虚拟世界，  
+ ‘皮卡皮卡\~’地放着光与乌帕合体了！  
+ 就成为了这个‘绿之妖精先生乌帕’！超级可爱，超级强大的哟\~  
+ 真由喜好感动呀\~对这类剧情完全没有抵抗力呢\~导演先生真是天才啊\~”  
 “原、原来如此啊。”  
-能让真由理这么热衷地诉说的事情实在少有。的确仔细看的话，能发现真由理拿着的乌帕和普通的绿色乌帕在设计上稍微有些区别。因为不怎么了解乌帕，哪里有什么不一样……要是被这么问的话还是一头雾水的。  
-“这个钥匙圈啊，我到处找过呢。  
- 超级有人气的，不管哪里都卖完了哟\~没想到 HANDS 还有剩下的呢\~”  
+很少有事情能让真由理这么热衷地诉说。的确，仔细看的话，能发现真由理拿着的乌帕和普通的绿色乌帕在设计上稍微有些区别。因为不怎么了解乌帕，具体有哪里不一样……要是被这么问的话还是一头雾水。  
+“这个钥匙圈啊，我到处找过好久呢\~  
+ 超级有人气的，不管哪里都卖完了哟\~  
+ 没想到 HANDS 还有存货呢\~”  
 “很幸运呢。”  
 “嗯！而且，这是最后的一个哟\~今天来了真是太好了，要感谢冈伦和叔叔呢！”  
-真由理用指尖灵巧地拆开纸质的商品包装，从包中取出家里的钥匙，然后小心地装了上去。  
-“嘿嘿\~呐，冈伦，真由喜啊，要把这个一直\~一直\~\~珍藏着的！”  
-“啊，好好珍惜吧！千万别才买了 5 分钟就丢了哦。”  
-真由理可是有前科的。我在广播管抽到的金属乌帕，在交到真由理手中后，仅仅 5 分钟就弄丢了。到最后，那个金属乌帕也一直都没有找到。那个时期的事不怎么想回忆起来，所以关于金属乌帕的去向也就不了了之了。  
-“嗯！绝对、绝\~对\~\~不会再弄丢的！”  
-一边说着这些话，两个人踏上了回家的路。  
-“冈伦家店的 POP，我就鼓足干劲去做咯！”  
-“啊——还有这么一回事啊……”  
-还以为买完材料就算结束了。不如说现在才是正式开始。  
-“要我帮忙吗？”  
-“不不，没事的。希望你能相信真由喜的品味啊\~”  
-“……光是买了心形的 POP 这点，就该怀疑你的品味了。”  
-“没问题的啦\~”  
-“嘛，能帮忙弄 POP 已经很感谢了，没什么抱怨的了。”  
-“啊，要给妈妈发个短信呢，告诉她晚饭的时候再回去。”  
-“那要不在我家吃也行啊？反正我爸妈他们肯定要留你的。”  
-“唔\~嗯，怎么办比较好呢\~  
- 冈伦的话，今天之后一直在家的吗？不去联谊什么的吗？”  
-“最近完全都没去了。”  
-去年秋天刚弃掉中二病那会儿倒是想着成为一个普通的大学生什么的，然后十分勉强地跑去参加联谊来着。最近则是忙于学习的事，去参加的机会也减少了。  
-“这样啊\~那，我就去打扰了\~”  
+真由理用指尖灵巧地拆开纸质的商品包装，从包里取出家里的钥匙，然后小心地装了上去。  
+“嘿嘿\~呐，冈伦，真由喜啊，会把这个一直\~一直\~\~珍藏着的！”  
+“啊，好好珍惜吧。千万别才买了 5 分钟就丢了哦。”  
+真由理可是有前科的——我在广播馆抽到的金属乌帕，在交到真由理手中后，仅仅 5 分钟就弄丢了，到最后也没有找到。我不怎么想回顾那个时期的事情，所以最终金属乌帕的去向也就不了了之了。  
 
-就在真由理稍微犹豫着拿出手机，想要输入邮件的时候——  
-她的表情，突然沉了下来，就那么站在原地不动了。  
+![](../static/image/0038-3.png)
+
+“嗯！绝对、绝\~对\~\~不会再弄丢的！”  
+一边聊着，两个人踏上了回家的路。  
+“冈伦家店的 POP，我会鼓足干劲去做的！”  
+“啊——还有这回事啊……”  
+还以为买完材料就算结束了，不如说现在才要正式开始。  
+“要我帮忙吗？”  
+“不不，没事的，希望你能相信真由喜的品味啊\~”  
+“……光是买了心形卡片这一点，就该怀疑你的品味了。”  
+“没问题的啦\~”  
+“嘛，能帮忙弄 POP 已经很感谢了，所以我也没什么抱怨的。”  
+“啊，要给妈妈发个信息呢，告诉她晚饭的时候再回去。”  
+“那干脆在我家吃也行啊？反正我爸妈他们肯定要留你的。”  
+“唔嗯\~怎么办比较好呢\~  
+ 接下来的时间冈伦会一直在家的吗？不去联谊什么的吗？”  
+“最近完全都没去了。”  
+去年秋天，刚放下中二病那会儿，我倒是打算当一个普通的大学生，然后十分勉强地跑去参加各种联谊来着。最近则是忙于学习的事，去参加的机会也减少了。  
+“这样啊\~那，我就去打扰了\~”  
+就在真由理放下纠结拿出手机，想要输入邮件的时候——  
+她的表情突然沉了下来，就那么站在原地不动了。  
 
 
 <br/>
