广播管     --> 广播馆 森之妖精 --> 绿之妖精

--- a/article/sg0/doc/0013.md
+++ b/article/sg0/doc/0013.md
@@ -28,7 +28,7 @@
  只要能按照目前以来的测试跳跃一样顺利的话就可以了。”  
 “*Okey-dokey!* ”  
 铃羽一边回答着父亲，一边按照顺序将机器的开关一个接一个地打开。因为已经预见到今天迟早会到来的缘故，启动过程早已经过不知道几百次的模拟，让身体彻底记住了。机器原本微弱的声音，逐渐的开始变大。  
-“根据数据来看的话，以前的广播管正好就在这个地方的楼顶。  
+“根据数据来看的话，以前的广播馆正好就在这个地方的楼顶。  
  但是高度可能会出现 1 米左右的误差，落地的时候应该会有冲击。”  
 “了解。”  
 这台时间机器虽然能够做到时间跳跃，但是没有办法空间移动。为了到达近 60 年前的广播会馆楼顶的话，就必须从这个坐标出发。  
