--- a/article/sg0/doc/0016.md
+++ b/article/sg0/doc/0016.md
@@ -1,6 +1,6 @@
 # 闭时曲线的碑文 - 11
 > 1.129848  
-> [ 铃羽视角 ] 广播管楼顶，相隔 35 年的对话。发现可疑人员，但没有追到。  
+> [ 铃羽视角 ] 广播馆楼顶，相隔 35 年的对话。发现可疑人员，但没有追到。  
 
 | [←prev](./0015) | [menu](../) | [next→](./0017) |
 
