--- a/article/sg0/doc/0146.md
+++ b/article/sg0/doc/0146.md
@@ -1,6 +1,6 @@
 # 弹性界限的认知 - 02
 > 1.129954  
-> [ 2011/06/25 ] 与 0038 相似却略有不同的展开。  
+> [ 2011/06/25 ] 与 0038 相似却略有不同的展开：在咖啡店发现『栗悟饭和龟波功』最近还在发帖，于是冈伦用『萨列里的邻居』的网名试探。  
 
 | [←prev](./0145) | [menu](../) | [next→](./0147) |
 
@@ -10,6 +10,8 @@
 （夏天啊……）  
 也就是说……那个事件，已经快要过去一年了。  
 这是个周六的午后。家里不仅闷热难当，还被老爸唠叨着帮忙店里的生意，于是我来到了池袋车站附近。如果是在一年前，还有 LAB 这个落脚处，现在因为铃羽住在那儿，就尽量不过去了。但是这样一来，休息日适合学习的地方，就不怎么好找了。去大学也嫌麻烦，休息日估计教室也不开放。经过种种考量，我最终决定，在离家较近的这间咖啡店坐几个小时。实际上，这种咖啡店里，像我这种点一杯咖啡坐几个小时的人非常多，有的带来了笔记本电脑，有的在读书。我说不定也加入了这些现充的行列了……不由得心中苦笑。  
+
+![](../static/image/0038-1.png)
 
 正在咖啡店里看书的时候，手机响起了 RINE 的消息提示音。  
 『嘟嘟噜\~♪现在在哪？』  
@@ -26,7 +28,6 @@
 （那家伙，去过我家了啊……）  
 我家的【冈部青果店】，位于一条古老的商业街中，建成差不多有 40 年了，残破得很，是时候该重新装修一下了。  
 注意力没法集中了，还有不到 15 分钟真由理就到了，今天的学习就到这吧。上午把该读的都读过了，嗯，也算是可以吧。我都有些吃惊于自己最近的专注度，因为有了目标，简直干劲满满，我必须尽早达到去维克多·孔多利亚大学的条件。  
-
 （维克多·孔多利亚大学啊……）  
 我和比屋定有定期互发邮件和 RINE。她好像每天都在夜以继日地研究，总是一副睡眠不足的样子。  
 我拿出了手机，下意识地在桌面寻找某个图标。但是，那个图标半年前就被我亲手删除了。  
@@ -54,10 +55,10 @@
 
 ![](../static/image/0146-1.png)
 
-编辑好了……发送。接下来会怎么样呢？我故意用了挑衅性质的语气，并且多多少少混进了一些错误的内容。虽然由我自己来说可能不合适，但是我觉得，我比起比屋定他们更了解红莉栖。  
+编辑好了……发送。接下来会怎么样呢？我故意用了挑衅性质的语气，并且多多少少混进了一些错误的内容。虽然由我自己来说可能不合适，但是我觉得，我比雷斯吉宁教授和比屋定他们更了解红莉栖。  
 “哼哼哼……应该会轻易上钩的，如果是‘红莉栖’的话……”  
 
-“冈~伦。”  
+“冈\~伦。”  
 “啊……！”  
 不知从什么时候开始，真由理站在了我面前。  
 “什么嘛，你已经到了啊。”  
@@ -85,7 +86,7 @@
 “……那么，作为补偿，下次会送你礼物的。”  
 “真的？好开心呐！”  
 
-![](../static/image/0038-1.png)  
+![](../static/image/0038-2.png)  
 
 大致转了一圈卖场，用于 POP 的材料种类相当多。我尽量不发表意见，让真由理按自己的品味选择。真由理花了相当长的时间，仔细地斟酌着该买哪个好。只是，是因为平时在 *MayQueen+Nyan²* 待久了的原因吗？真由理的品味该怎么说呢……偏向于萌系的方向。  
 “啊\~你看你看，这个心形的也很可爱呢\~”  
@@ -109,12 +110,11 @@
 
 因为是周六，收银台附近等待结账的客人堆得满了出来。感觉要排很久的样子，我就让真由理到别的楼层的动漫周边卖场去等我，那里会有真由理喜欢的《雷 NET 翔》的周边商品出售。真由理不好意思地按我说的去了。  
 
-
 结果，结账花了 15 分钟。同时我为表歉意许下的送礼物的约定也兑现了。  
 “诶嘿嘿\~\~♪”  
 真由理高兴至极地注视着手上的钥匙圈。  
 
-![](../static/image/0038-2.png)
+![](../static/image/0038-3.png)
 
 这是《雷 NET 翔》中登场的吉祥物角色“乌帕”。我让真由理在动漫周边卖场等待的时候随便选个喜欢的东西，于是她拿了这个。  
 “乌帕的话，明明已经有很多了……还会这么高兴啊？  
@@ -150,7 +150,7 @@
 “啊，好好珍惜吧。千万别才买了 5 分钟就丢了哦。”  
 真由理可是有前科的——我在广播馆抽到的金属乌帕，在交到真由理手中后，仅仅 5 分钟就弄丢了，到最后也没有找到。我不怎么想回顾那个时期的事情，所以最终金属乌帕的去向也就不了了之了。  
 
-![](../static/image/0038-3.png)
+![](../static/image/0038-4.png)
 
 “嗯！绝对、绝\~对\~\~不会再弄丢的！”  
 一边聊着，两个人踏上了回家的路。  
@@ -169,6 +169,7 @@
 “最近完全都没去了。”  
 去年秋天，刚放下中二病那会儿，我倒是打算当一个普通的大学生，然后十分勉强地跑去参加各种联谊来着。最近则是忙于学习的事，去参加的机会也减少了。  
 “这样啊\~那，我就去打扰了\~”  
+
 就在真由理放下纠结拿出手机，想要输入邮件的时候——  
 她的表情突然沉了下来，就那么站在原地不动了。  
 
