--- a/article/sg0/doc/0025.md
+++ b/article/sg0/doc/0025.md
@@ -8,11 +8,9 @@
 
 ![](../static/image/0025-1.png)
 
-“不行的哦，这样不好的哟……  
- ……绝对不行的哦，铃羽姐姐。  
- 不可以，那么做。”  
-“不可以改变这个世界！姐姐说的话太奇怪了！”  
-“不能抹掉这个世界！绝对不会让你这么做的！”  
+“不行哟，这样不好的……绝对不行哟，铃羽姐姐，那么做……不可以的。”  
+“不能改变这个世界！姐姐说的话太奇怪了！”  
+“不能让这个世界消失！绝对不会让你这么做的！”  
 时间机器内部被刻下的弹孔。让铃羽想起了曾经在这个机器里发生的事。那个时候是和篝最后的一次交谈。篝用枪指着她的额头说了这番奇怪的话。之后，就再也找不到篝了。  
 
 “铃羽，怎么在发呆？难道身体还是不舒服吗？”  
