--- a/article/sg0/doc/0118.md
+++ b/article/sg0/doc/0118.md
@@ -69,10 +69,10 @@
  ——咦？”  
 真由理回头看向篝，突然停了下来。于是我也停住了脚步，转身发现，本该跑在后面的篝，并没有跟上。稍微远点的地方，篝一脸恍惚地呆立不动。虽然脸朝向这边，眼睛好像在看着某个遥远的地方。  
 “篝小姐？怎么了？”  
-“……能听到。”  
+“能听到……”  
 她的声音很空洞，仿佛和刚刚的篝不是一个人。  
 “能听到什么？”  
-“……声音。能听到声音。”  
+“声音……能听到声音。”  
 “篝、小姐？”  
 真由理慢慢走向篝。  
 “我……不能不去。”  
