--- a/article/sg0/doc/0141.md
+++ b/article/sg0/doc/0141.md
@@ -46,7 +46,7 @@
 “……不要出声，照我说的做，否则……会没命。”  
 穿黑色骑手装的女人左手控制着比屋定，右手拿出了军用匕首，把它抵在比屋定的脖子上。她的声音，即使因为头盔变得十分沉闷，我也很熟悉。  
 “住——住手！”  
-我的脑海中，一段令我毛骨悚然的可怕记忆苏醒了。“椎名真由理，不需要。” ——虽然那是发生在其它世界线的事，但是，曾经夺走我最重要的青梅竹马的那个冷血的声音，如今，又再度出现在这里。  
+我的脑海中，一段令我毛骨悚然的可怕记忆苏醒了——“椎名真由理，不需要。” ——虽然那是发生在其它世界线的事，但是，曾经夺走我最重要的青梅竹马的那个冷血的声音，如今，又再度出现在这里。  
 我把牙齿咬得吱吱作响，紧盯着那个穿黑色骑手装的女人。  
 “你要的东西我会交出来，所以快住手……！”  
 在我挤出这句话后，穿黑色骑手装的女人把匕首从比屋定的脖子挪开，然后让另一个男人控制比屋定，自己脱掉了头盔。  
