--- a/article/sg0/doc/0015.md
+++ b/article/sg0/doc/0015.md
@@ -76,7 +76,7 @@
 “话说啊，就这样什么都不说明不是挺好的吗？”  
 桶子却给出了出乎意料的意见。  
 “阿万音氏，怎么说呢，我认为不是那种对秘密什么的非要刨根问底的人。  
- 铃羽的话应该十分了解不是么？”  
+ 铃羽的话应该十分了解不是吗？”  
 “的确未来的母亲不是那样的人……”  
 “那么就没问题了。等到时机成熟了，我会好好说明的。”  
 “真的？”  
@@ -165,7 +165,7 @@
  我，是这么认为的。”  
 “这就是，冈伦叔叔的回答吗？”  
 “至少现在是……”  
-“是么……”  
+“是吗……”  
 “被蔑视为只是在**逃避**也无所谓。”  
 “不会那么做的。”
 貌似是铃羽最近养成的习惯吧，她又望着天花板叹了口气。  
