--- a/article/sg0/doc/0044.md
+++ b/article/sg0/doc/0044.md
@@ -22,7 +22,7 @@
 “*OK, OK！*”  
 他拍了拍我的肩膀，露出满意的笑容。  
 “你果然是个非常深思熟虑的青年啊。”  
-“是、是么？我还是第一次被这么说呢。”  
+“是、是吗？我还是第一次被这么说呢。”  
 嘴上说着简单，其实，或许我只是胆小。  
 有时候是需要不畏挫败踏前一步的勇气的。  
 现在的我……怎么说呢……  
