--- a/article/sg0/doc/0060.md
+++ b/article/sg0/doc/0060.md
@@ -159,7 +159,7 @@
  我说“由真由喜来做吧\~”，伯母说“拜托了——”』  
 「没问题吗？真由理你也很忙吧，不要勉强」  
 『完全没问题哦\~我会做很好吃的东西，你早点回来哦\~♪』  
-「是么？真的？真没问题？」  
+「是吗？真的？真没问题？」  
 『等着你哦\~』  
 
 
