--- a/article/sg0/doc/0145.md
+++ b/article/sg0/doc/0145.md
@@ -1,6 +1,6 @@
 # 弹性界限的认知 - 01
 > 1.129954  
-> [ 2011/06/03 篝视角 ] 篝 6 岁时在战争孤儿养护机构，正式成为真由理的养女。然而名义上的治疗实际上是洗脑，并且很有可能是小时候就接受过洗脑，在医院只是进一步植入指示。桐生萌郁抢夺电脑任务失败后被组织惩罚身受重伤，篝救她回公寓，并假借 FB 的名义控制了她。  
+> [ 篝视角 ] 篝 6 岁时在战争孤儿养护机构，正式成为真由理的养女。然而名义上的治疗实际上是洗脑，并且很有可能是小时候就接受过洗脑，在医院只是进一步植入指示。桐生萌郁抢夺电脑任务失败后被组织惩罚身受重伤，篝救她回公寓，并假借 FB 的名义控制了她。  
 
 | [←prev](./0144) | [menu](../) | [next→](./0146) |
 
