Steins;Gate --> 命运石之门

--- a/article/sg0/doc/0000.md
+++ b/article/sg0/doc/0000.md
@@ -32,14 +32,14 @@
 （别这样！）  
 （别来管我这种人！）  
 （让我一个人待着！）  
-我没能拯救她——反而，**亲手夺去了她的生命**。在三周前的这个地方，是我，杀了她……我是，杀人犯。  
+我没能拯救她——反而，亲手夺去了她的生命。在三周前的这个地方，是我，杀了她……我是，杀人犯。  
 
 “没用的……不管什么方法，都是没用的……  
  哈、哈哈哈……一切，都早已注定了……  
  一样的……跟真由理那时，是一样的……  
  无论如何挣扎……结果都，是一样的……  
  我果然，无法……拯救红莉栖……”  
-**无论重来多少次，肯定都会收束成同样的结果**。与过程无关，不管是时间跳跃还是时间旅行，都不可能改变过去的结果。这一残酷的事实，我明明已经知道了。没想到会这样，以最痛苦的形式再次切身感受。  
+无论重来多少次，肯定都会收束成同样的结果。与过程无关，不管是时间跳跃还是时间旅行，都不可能改变过去的结果。这一残酷的事实，我明明已经知道了。没想到会这样，以最痛苦的形式再次切身感受。  
 “没用的……没用的啊……无论如何都是没用的啊！   
  我明白的……一开始就明白的……  
  这种结果，早就是预料之中的……  
@@ -58,18 +58,18 @@
 “说什么呢！你难道要放弃吗？  
  冈伦叔叔的肩上，可是扛着数十亿人的性命啊！  
  只是失败一次有什么好沮丧的？！”  
-“不管怎么样，都救不了红莉栖的……**我们根本无法忤逆世界线的收束**！”  
+“不管怎么样，都救不了红莉栖的……我们根本无法忤逆世界线的收束！”  
 这就是，世界的真理。这是早就清楚得不能再清楚的事情了。  
 
 “唔……这样的话，就算硬来我也要让你振作起来！”  
 “不行啊！这么勉强他，是不好的啊……变得这么颓废的冈伦，我根本看不下去啊……”  
 “可是啊，这样下去，是无法改变未来的啊。”  
-“为什么？**为什么要把未来的事，都推给冈伦呢**？这实在，太沉重了……”  
-“这都是因为冈伦叔叔，**有着成为世界观测者的能力**啊。”  
+“为什么？为什么要把未来的事，都推给冈伦呢？这实在，太沉重了……”  
+“这都是因为冈伦叔叔，有着成为世界观测者的能力啊。”  
 “冈伦他，明明没有期望过这些……  
  而且我觉得，就算再试一次，也只会继续让冈伦受伤……  
  靠**一个人**来改变未来这种事，肯定是办不到的啊……”  
-“可是我们一定要到达 **Steins;Gate（命运石之门）**……  
+“可是我们一定要到达 **命运石之门（Steins;Gate）**……  
  你的心情我理解。但是啊，我也是从未来，来到这里的啊。  
  不论如何我也回不去 2036 年了，所以我不会就这么放弃的。”  
 “……”  
@@ -77,7 +77,7 @@
  虽然我之前说最多还能来回两次，但其实还是有点剩余的。  
  不过，最多也只够移动 **344** 天。  
  即使是单程时间跳跃，再过不到一年的时间，就再也没办法跳回到 **7 月 28 日**了。  
- 请记住了，到了那天，**即使只有我一个人，我也会跳跃的**。”  
+ 请记住了，到了那天，即使只有我一个人，我也会跳跃的。”  
 “……”  
 有谁在对我说着些什么，但我无法理解话中的意思。现在的我什么都不想听，只想像烂泥一样睡过去。  
 已经够了吧……  
