--- a/article/sg0/doc/0040.md
+++ b/article/sg0/doc/0040.md
@@ -47,7 +47,7 @@
 铃羽不觉得年仅 10 岁的篝能理解这种话题，所以她也没打算深入说明。  
 “而且，公元 2000 年是一个特殊的年份，好像所有的世界线收束成了一条。  
  以此为关联，这个问题说不定会严重影响所有世界线因果。  
- 我们作为目标的‘处于缝隙的世界线’——Steins;Gate，也不例外。”  
+ 我们作为目标的‘处于缝隙的世界线’——命运石之门，也不例外。”  
 铃羽把视线转向连接着 IBN5100 的手机终端。  
 “所以这正是为了防止‘千年虫问题’的修正程序哦。”  
 现在，她正在将修正程序转换成 IBN5100 专用语言。之后，再把这个程序以病毒的形式扩散到全世界，就能完全解决被这个时代的工程师忽略的“千年虫问题”。  
@@ -57,7 +57,7 @@
 
 “但、但是……如果改变了未来，篝和大家在一起的未来世界……也会完全改变的吧……？”  
 令人意外的是，篝好像粗略地理解了刚才铃羽所说的话。  
-“没错，不会让那种世界存在了，我们就是为了抵达 Steins;Gate 才来到了这里。”  
+“没错，不会让那种世界存在了，我们就是为了抵达命运石之门才来到了这里。”  
 “……”  
 突然，篝本来带着不安表情的脸沉了下来。她仿佛灵魂出窍一般，缓慢地睁大双眼，面无表情。  
 “**声音……听到了，神明大人的……声音……”**  
