--- a/article/sg0/doc/0043.md
+++ b/article/sg0/doc/0043.md
@@ -77,10 +77,9 @@ GOGO 咖喱店，虽说是周日，到了下午两点，用餐的高峰也已经
 但是，作为被求助对象的桶子，依旧像机器人一样僵硬地，重复着将咖喱送进嘴里咀嚼的动作。  
 “……哥哥？”  
 听到再次呼唤，他一卡一卡地将脖子转向了这边。  
-“ni shuo shen me（你 说 什 么）”  
+“你 说 什 么——”  
 “你怎么了？总觉得好奇怪哟？”  
-“mei you zen me o（没 有 怎 么 哦）  
- bing bu qi guai o（并 不 奇 怪 哦）”  
+“没 有 怎 么 哦—— 并 不 奇 怪 哦——”  
 “？？？”  
 这下他的语言系统也彻底机器人化了。铃羽忍不住看了下由季的表情。  
 “……”  
@@ -122,10 +121,8 @@ GOGO 咖喱店，虽说是周日，到了下午两点，用餐的高峰也已经
 “哎？”  
 “要搬到…稍远些的地方。”  
 “是、是吗！？”  
-“大概……应该不会再回来了。  
- 我很担心爸——哥哥  
- 所以啊，由季小姐，  
- 这种事，虽然由我来拜托有点奇怪——”  
+“大概……应该不会再回来了。我很担心爸——哥哥。  
+ 所以啊，由季小姐，这种事，虽然由我来拜托有点奇怪——”  
 说到这里，铃羽深深地鞠躬——  
 “桥田至，就拜托您了！”  
 “……”  
