--- a/article/sg0/doc/0097.md
+++ b/article/sg0/doc/0097.md
@@ -57,14 +57,14 @@
 这个回答令篝放下了心。  
 “这才对。因为未来，是可以改变的。”  
 “未来可以改变……？”  
-“嗯！妈妈这样说的。一定可以改变，绝对会让它改变的。”  
-“让它……改变……”  
-真由理一直都对篝这样说。对篝来说是微弱的希望之光。  
+“嗯！妈妈这样说的，一定可以改变，绝对会改变未来的。”  
+“改变……未来……”  
+真由理一直都对篝这样说。这对篝来说是微弱的希望之光。  
 “那个什么……什么来着……Stein……什么的。”  
-“Steins;Gate 吗？”  
-“对，就是这个！Steins;Gate 一定存在，妈妈是这么说的。”  
-“……话是这么说，它是个什么，我也不太明白，诶嘿嘿——”  
-Steins;Gate——这个词的意思，说实话篝并不明白。尽管如此，真由理只要说这句话，心就暖和起来了。引领我们通向 Steins;Gate 的人一定会出现，如此想着，明天就会充满希望。  
+“*Steins;Gate* 吗？”  
+“对，就是这个！*Steins;Gate* 一定存在，妈妈是这么说的。  
+ ……话是这么说，它到底什么，我也不太明白，诶嘿嘿——”  
+*Steins;Gate*——这个词的意思，说实话篝并不明白。尽管如此，只要听到真由理说这句话，心就暖和起来了。只要想着，引领我们通向 *Steins;Gate* 的人一定会出现，明天就会充满希望。  
 
 ![](../static/image/0097-2.png)
 
@@ -103,7 +103,7 @@ Steins;Gate——这个词的意思，说实话篝并不明白。尽管如此，
 “但是，刚才……”  
 是的，不知道。自己不知道这样的地方。但——  
 “不明白……不知道，但是……不知道为什么，刚才又感觉……好像知道……”  
-大脑深处绞痛着。篝非常不安，好像有什么可怕的事情即将发生。  
+大脑深处绞痛着，篝非常不安，好像有什么可怕的事情即将发生。  
 
 
 <br/>
