--- a/article/sg0/doc/0127.md
+++ b/article/sg0/doc/0127.md
@@ -25,7 +25,7 @@
 “这是 2025 年的冈伦，留下的口信……”  
 “我留下的……口信……？”  
 “11 年前的冈伦是这样说的：
- ‘寻找 *Steins;Gate* 这条世界线的道路是凶险的。  
+ ‘寻找命运石之门这条世界线的道路是凶险的。  
  只是重复一次两次，是不可能找到方法的吧。  
  但是，  
  **从那时开始，我们做的所有事情，不是都会成为通往命运石之门的道路吗——**  
