--- a/article/sg0/doc/0130.md
+++ b/article/sg0/doc/0130.md
@@ -8,7 +8,7 @@
 
 “是我……  
  现在开始，我们将着手实行新的作战。  
- 未来的我说了，在无数的未来的前方，*Steins;Gate* 在等着我们。  
+ 未来的我说了，在无数的未来的前方，命运石之门在等着我们。  
  今后通往的未来，即使是荆棘之路，也肯定不是无用的。  
  ……我明白。我们目标的那扇门——为了到达那里，会花上难以估量的时间吧。  
  各方面的机关很可能会来阻止我们，妨碍我们。  
@@ -36,8 +36,8 @@
 
 “那么，你具体想怎么做呢？”  
 好在真帆貌似暂时不再纠结于之前的闹剧，开口将话题拉回正轨。  
-“咳咳——首先要声明的是，**我们**的最终目标是**不发生第三次世界大战的未来**。”  
-刚才也对自己说了，我不认为我们能很快就到达我们想要的世界线——*Steins;Gate*。就像那个夏天，一步一步积累下来才最终抵达了 β 世界线一样，为了要抵达命运石之门，一定要**先达成众多的过去和未来**才行。为了那个目标，现在必须要做的事情，就是**修正这条世界线的未来**。失去了红莉栖这般重要存在换来的这个世界，其前方等待着的未来，不能容许有那样巨大的悲伤和痛苦存在，我不会认同。所有的事情必须从这里开始。即使之后，现在将要通往的那个未来将不复存在，这也是选择了这个世界的我的责任。  
+“咳咳——首先要声明的是，我们的最终目标是**不发生第三次世界大战的未来**。”  
+刚才也对自己说了，我不认为我们能很快就到达我们想要的世界线——命运石之门。就像那个夏天，一步一步积累下来才最终抵达了 β 世界线一样，为了要抵达命运石之门，一定要**先达成众多的过去和未来**才行。为了那个目标，现在必须要做的事情，就是**修正这条世界线的未来**。失去了红莉栖这般重要存在换来的这个世界，其前方等待着的未来，不能容许有那样巨大的悲伤和痛苦存在，我不会认同。所有的事情必须从这里开始。即使之后，现在将要通往的那个未来将不复存在，这也是选择了这个世界的我的责任。  
 “我跟你们说过吧，在来到这条 β 世界线以后，经历过几次世界线变动。  
  首先必须要消除那些原因。”  
 “原因，是什么喵？”  
