--- a/article/sg0/doc/0138.md
+++ b/article/sg0/doc/0138.md
@@ -77,7 +77,7 @@
 “那个台词，爸爸也要！也对爸爸说 Please！”  
 “爸爸也是，谢谢。”  
 “再来一次！视线再往上一点，眼含泪光地再说一次吧，我的女儿！”  
-改变了过去的话，这一年来我好不容易做到的事都会相当于没发生过。经历了未来的事也好，花了恍若隔世般漫长的时间再次回来的事也好，但这并不代表，那些经验都会白费。现在的我，和即将踏上旅程的过去的我，还有这之后的未来——把那些经验都交汇起来之后，连接着未来的那扇门——命运石之门 *Steins;Gate*——一定在等着我们。
+改变了过去的话，这一年来我好不容易做到的事都会相当于没发生过。经历了未来的事也好，花了恍若隔世般漫长的时间再次回来的事也好，但这并不代表，那些经验都会白费。现在的我，和即将踏上旅程的过去的我，还有这之后的未来——把那些经验都交汇起来之后，连接着未来的那扇门——命运石之门——一定在等着我们。
 
 ![](../static/image/0138-2.png)
 
