--- a/article/sg0/doc/0012.md
+++ b/article/sg0/doc/0012.md
@@ -88,7 +88,7 @@
 “可是呀，冈伦叔叔他……就是不肯听我一句……  
  这样下去，冈伦叔叔就不会回到过去；  
  他拯救不了牧濑红莉栖，也就无法抵达命运石之门……”  
-命运石之门（Steins;Gate)，那是 2036 年的父亲告诉自己的，第三次世界大战也许不会发生的“未知世界线”。要将冈部伦太郎指引向那条世界线，正是阿万音铃羽必须完成的使命。然而，到现在却进展不顺……铃羽来到了 2010 年，曾经按照计划，成功地将冈部伦太郎带回了 7 月 28 日。但是冈部伦太郎却**搞砸**了，于是他再也不愿意站起来了。铃羽每次遇见他就会尝试劝他回心转意，然而他能不能听进去……不好说。  
+命运石之门（*Steins;Gate*），那是 2036 年的父亲告诉自己的，第三次世界大战也许不会发生的“未知世界线”。要将冈部伦太郎指引向那条世界线，正是阿万音铃羽必须完成的使命。然而，到现在却进展不顺……铃羽来到了 2010 年，曾经按照计划，成功地将冈部伦太郎带回了 7 月 28 日。但是冈部伦太郎却**搞砸**了，于是他再也不愿意站起来了。铃羽每次遇见他就会尝试劝他回心转意，然而他能不能听进去……不好说。  
 “到头来，世界收束到第三次世界大战，死了很多人……  
  我明明是为了改变这些才来的，难道我办不到吗……”  
 
