--- a/article/sg0/doc/0149.md
+++ b/article/sg0/doc/0149.md
@@ -1,177 +1,151 @@
 # 弹性界限的认知 - 05
 > 1.129954  
-> [ 2011/06/月末 铃羽视角 ] 在 0041 基础上添加剧情：比屋定远程协助桶子偷偷开发时间机器；研究所不批准她来日本的申请，她决定偷偷过来；未来桶子的同伴中没有比屋定。  
+> [ 2011/06/月末 铃羽视角 ] 在 0041 基础上添加剧情：真帆远程协助桶子偷偷开发时间机器；研究所不批准她来日本的申请，她决定偷偷过来；未来桶子的同伴中没有真帆。  
 
 | [←prev](./0148) | [menu](../) | [next→](./0150) |
 
 ---
 
-“……”  
-“没有一个晚上不回想起篝的。”  
-“虽然来到这个时代后不久就去寻找篝了，但还是没有发现关于篝的线索。”  
-“但是——现在大概已经成长到 22 岁的椎名篝确实在这个秋叶原。”  
-“铃羽对此确信不疑。”  
-“喔、真帆碳，早啊。”  
-“铃羽的身边，朝向 PC 的桶子对着显示器发出了声音。”  
-“显示器里映出的视屏聊天画面，在那里出现的是一位衣冠不整的少女——纠正，了不起的成年女性。”  
+铃羽没有一个晚上不想起篝。来到这个时代之后，已经寻找很长时间了，结果没有任何线索。然而，铃羽确信，现在应该已经 22 岁的椎名篝，毋庸置疑就在秋叶原。  
+
+“喔，真帆碳，早啊。”  
+铃羽此时坐在电脑前，桶子也坐在一旁，对着电脑屏幕打着招呼。屏幕显示的是视频聊天的界面，其中出现了一位少女——纠正，一位优秀的成年女性。  
 
 ![](../static/image/0149-1.png)
 
-“……早。”  
-“在这里，秋叶原的未来小道具研究所的时钟指向的是下午 8 时 30 分。”  
-“另一边，“Daylight Saving Time”，通常所说的位于夏令时的维克多·孔多利亚大学更有 1 小时的时差，现在是上午 7 时 30 分。”  
-“比屋定小姐，没事吧。”  
-“这个时间，刚睡醒吧。”  
-“真帆的样子惨不忍睹。”  
-“虽然头发乱蓬蓬的一直都那样，但是充血得通红的双眼不仅没有焦点，而且视线飘忽不定。”  
-“眼圈下的黑影厚得只是稍微化妆下是掩盖不住的程度。”  
-“也许是错觉，脸颊也消瘦了，本来就已经瘦小的身体又缩小了一圈的感觉。”  
-“而且，肤色非常惨白，简直就像僵尸一样完全没有生气。”  
+“呼……早。”  
+这里是秋叶原，未来道具研究所墙上的时钟指向 8 时 30 分；地球另一边的维克多·孔多利亚大学，由于夏令时的关系，还要再早 1 个小时，所以是早上 7 时 30 分。  
+“比屋定小姐，你还好吧？”  
+“这个时间，应该是刚睡醒吧。”  
+真帆的模样惨不忍睹。头发一如既往乱蓬蓬的；双眼通红布满血丝，不仅没有焦点，而且视线飘忽不定；黑眼圈严重到轻度化妆都掩盖不住的程度；也许是错觉，看起来脸颊都凹陷了，本来就瘦小的身体感觉又缩小了一圈；再加上肤色惨白，简直就像僵尸一样毫无生气。  
 “低血压的真帆碳也好萌啊。”  
-“……”  
-“换作以前的话，对于桶子这样胡乱的称呼方式，真帆是不会隐藏不愉快的表情的。”  
-“最近不知是习惯了还是放弃了，对此没有表现出特别的反应。”  
+“呼……”  
+换作是以前，对于桶子这种胡闹的称呼方式，真帆会毫不掩饰地表达不高兴。最近不知道是习惯了还是放弃了，她对此不会作出特别的反应。  
 “……你们那边进展怎么样？”  
-“总算重新组装到了冈伦分解掉之前的状态，我想机能基本能够重现出来。”  
-“桶子把视线投向了 LAB 的深处，通称为『开发室』的隔帘里面。”  
-“现在，也获得了真帆的协助，正在重新制作被冈部称为时间跳跃装置的机器。”  
-“……进展不顺利吗？”  
-“嗯，该说是不稳定吗，变成了普通的微波炉了。”  
-“是吗……”  
-“……到底哪里不对了呢。”  
-“向冈伦问下这个就能知道哪里不对了。”  
-“不行的……光是知道我们在这样做就会发火了。”  
-“叔叔是在畏惧着这个被称为世界线收束的力量。”  
-“要说服那个人不容易。”  
-“实际上，铃羽一直都无法说服冈部，马上就要过去 1 年了。”  
+“总算重新组装成了冈伦拆掉之前的状态，我想机能基本能够还原。”  
+桶子把视线投向 LAB 深处，通称为“开发室”的隔帘里面。现在，获得了真帆的协助，他们正在重新制作被冈部命名为“时间跳跃装置”的机器。  
+“……不顺利吗？”  
+“嗯，该说是不稳定吗，感觉和普通的微波炉没什么区别。”  
+“是吗……到底是哪里不对呢？”  
+“要是能问问冈伦，就能知道哪里不对了呐。”  
+“不可能吧……他光是知道我们在做这种事，就会发火了。  
+ 叔叔在畏惧着，那个被他称为‘世界线收束’的力量。  
+ 要说服他没有那么容易。”  
+实际上，铃羽一直都无法说服冈部，马上就要过去 1 年了。  
 “嗯……”  
-“暂时沉默了一会。”  
-“……”  
-“呃，真帆碳！难道睡着了？”  
+三人暂时沉默了一会儿。  
+“呼……”  
+“呃，真帆碳！你不会睡着了吧？”  
 “哇！？”  
-“显示器中的真帆身体哗地震了一下，差点连椅子一起翻到。”  
-“……好危险，明明马上就要出勤了，差点又要睡着了。”  
-“话说，拼过头了吧，勉强过度把身体搞坏了不是毫无意义吗？”  
-“这点程度小意思，反而，都做到这种程度了，还是比不过“天才”啊。”  
-“我觉得没有那么回事，我认为真帆碳也足够称得上天才——”  
-“安慰的话就算了。”  
-“冈部所说的时间跳跃，明明有这么多提示了，然而到现在还找不到其中的“答案”。”  
-“记忆数据这么巨大的东西，到底是如何压缩并发送到过去的……”  
-“明明红莉栖已经成功了……”  
-真帆看起来有些急躁，那份急躁通过显示器传达了过来。  
-“啊，对不起，不是抱怨的时候呢。”  
-“今天的报告还有其他什么事吗？没的话，我想我差不多要上班了。”  
+显示器中的真帆身体猛地震了一下，差点连椅子一起翻倒。  
+“啊……好险，明明马上就要上班了，差点又睡着了。”  
+“话说，你拼过头了吧？太过勉强把身体搞坏了就不值了吧？”  
+“这种程度不算什么。反而，都做到这种程度了，还是比不过‘天才’啊。”  
+“我觉得没有那回事，对我来说，真帆碳也足够称得上天才——”  
+“不用安慰我了。  
+ 冈部先生所说的时间跳跃，明明有这么多提示，可我到现在还找不到‘解’……  
+ 记忆那么庞大的数据，到底是如何压缩并发送到过去的？  
+ 明明红莉栖已经成功解决这个问题了……”  
+真帆看起来有些急躁，通过显示器都能感受得到。  
+“啊，对不起，现在不是抱怨的时候呢。  
+ 今天的例会还有其他事吗？没有的话，我差不多要准备上班了。”  
 
 “还有一件事。”  
-“铃羽这么说看向了桶子。”  
-“关于之前你拜托的希望调查的事。”  
-“知道什么了吗？”  
-“明确的事还不清楚。”  
+铃羽说完看向桶子。  
+“关于之前你拜托我们调查的事。”  
+“查到什么了吗？”  
+“还没完全清楚。”  
 “是吗……”  
-“试着强行入侵各处的网络，做到极限了。”  
-“我没有责怪的意思，告诉我现在知道的事吧。”  
-“不，反而猛烈地怒骂过来也 OK 哦。”  
+“我试着强行入侵了各处的网络，尽可能调查了。”  
+“我没有责怪的意思，告诉我现在知道的就可以。”  
+“不，你痛骂我一顿也完全 OK 哦。”  
 “爸爸！”  
-“快点，时间不多了。”  
+“快点说吧，时间不多了。”  
 “是是。”  
-“桶子打开了显示器中的另一个窗口，文件夹中的某个文本文件被显示了出来。”  
-“那里面写着桶子和铃羽搜集的信息记录。”  
-“那么首先，真帆你们在酒店地下停车场被袭击的事件。”  
-“根据警察的声明，是新兴宗教集团的男子因使用违禁药物导致的……这么说来着。”  
-“那个，肯定是骗人的。”  
+桶子操作电脑打开另一个窗口，共享了文件夹中的某个文本文件，里面记录着桶子和铃羽搜集的信息。  
+“呃，首先是，真帆碳你们几人，在酒店地下停车场被袭击的那起事件。  
+ 根据警方的公告，说是新兴教团的男性成员，服用了违禁药物导致的……  
+ 那个，肯定是假的。”  
 “假的……？”  
-“犯人的身份和警察发表的一样，是某个大学的准教授。”  
-“这点还好，但是他所属于宗教团体的事实根本查不到。”  
-“我也入侵了安全局秘密藏有的教团成员数据，所以确定。”  
-“也就是说……是捏造的吧。”  
-“看了下 @ch 之类的，类似信徒的人偶尔会留言说“教团是无辜的”、“是阴谋”之类的。”  
-“于是，一瞬间很多的教团黑涌了出来并往死里喷。”  
-“而且那些喷子们，不断地拿出非常逼真的假证据，还附有图片。”  
-“不管怎么说，那也有点异常。”  
-“是吗？我，对那个 @ch 不太熟悉……”  
-“包括 @ch 在内，大部分的大型网站都有水军看着。”  
-“而且是作为职业收取工资的，从早到晚 24 小时盯着。”  
-“情报操作，就是政治宣传呢。”  
-“政治家和官僚们也利用网络舆论的引导，也有专业从事这方面的公司存在。”  
+“犯人的身份和警方发布的一致，是某个大学的准教授。  
+ 但是根本查不到，他参加了某个教团的事实。  
+ 于是我入侵了安全局的机密数据库，查看了该教团的成员信息，才最终确定。”  
+“所以是……捏造的吧。”  
+“浏览 @ch 等网站时，类似信徒的人偶尔会留言说‘教团是无辜的’、‘这是阴谋’之类的。  
+ 这时就会突然冒出来一大批反教团的喷子，全力抨击那些喊冤的人。  
+ 而且那些喷子们还会不断拿出非常逼真的假证据，还附有图片。  
+ 不管怎么说，这种情况也有些异常。”  
+“是吗？我对那个 @ch 不太熟悉……”  
+“包括 @ch 在内，大部分的大型网站都有水军盯着。  
+ 而且是专职收取工资的，从早到晚 24 小时盯着。”  
+“信息操纵，也就是政治宣传呢。”  
+铃羽对这种手段心知肚明。  
+“政治家和官僚们也会利用他们引导网络舆论，也有专业从事这方面的公司。”  
 “原来如此，那我就明白了，这方面美国和日本都一样呢。”  
-“但是水军什么的，以我来看就算换了 IP 也一目了然。”  
-“于是查了一下发现，那件事投入了相当人数的水军的样子。”  
-“到达了“哪来这么多钱请人”的程度。”  
-“是吗……”  
-“老爸工作地点被袭击的事件呢？”  
+“区区水军之流，即使换了 IP，我一看就能认出。  
+ 于是查了一下发现，为了那件事貌似投入了相当人数的水军。  
+ 数量多到让人怀疑，哪来这么多钱请人。”  
+
+“爸爸打工地点被袭击的那起事件呢？”  
 “那边也一样。”  
-“在警察公布的消息里，事情的原因变成了想要在日本扩张地盘的国外黑手党组织之间的斗争。”  
-“媒体也意外的老老实实地按照这样报道了，就连平时对于媒体的报道绝对不轻信的 @ch 上，也极为不自然地只认为这个报道为是正确的。”  
-“当然，俄罗斯和 SERN 的事甚至都没有成为话题。”  
-“然后，我试着假装成目击者发表了看见了俄罗斯的特种部队的帖子。”  
-“于是啊，变得不得了了，批判声浪如潮吓了一跳【校注：Let’s 炎上】。”  
-“那个时候，恨不得把水军的真名和公司名全部暴出来呢。”  
-“看样子是相当的气愤。”  
-“桶子像这样生气的样子很……不罕见的样子，铃羽纠正了想法。”  
-“也就是说，某处施加了压力，事件被落下了帷幕这么一回事吧。”  
-“不亏是日本，自由的国度啊。”  
-“美国不也差不多么。”  
-“没错。”  
+在警方的公告里，事件被描述成，国外黑手党组织之间的斗争，为了在日本扩张地盘。媒体也意外地老老实实按照这个说法报道了，就连平时绝对不轻信媒体报道的 @ch 上，也极不自然地一边倒地认为这个报道是正确的。不用说也知道，俄罗斯和 SERN 甚至都没有出现在话题中。  
+“我试着假装成目击者发了个帖子，说看见了俄罗斯的特种部队。”  
+“然后啊，不得了，声浪如潮，无数人跳出来把我批判一番。  
+ 那时我真恨不得，把那些水军的真名和公司名全部爆出来呢。”  
+桶子看样子是被气坏了。爸爸这么生气的样子很少——好像也不少见……铃羽仔细回忆了一番。  
+“也就是说，有人施加了压力，把事件压下来了吧。  
+ 不亏是日本，自由的国度啊。”  
+“美国不也差不多吗？”  
+“没错呢。”  
 两人露出了讽刺的笑容。  
 “所以，我举手投降了。”  
-“是吗……”  
-“这足够了，感谢你的调查。”  
+“是吗……这就足够了，感谢你的调查。”  
 
-“比屋定小姐，研究所能通过来日本的许可吗？”  
-“……那个，虽然以作为雷斯吉宁教授的助手带我一起过去这样申请过好几次，但是却都是否决。”  
-“雷斯吉宁教授现在，来了这里吧？”  
-“嗯，是关于新型脑炎的调查。”  
-“因为不是关于人工智能的事情，真帆不能与之同行的样子。”  
-“好吧，如果怎么样都不行的话，我也有想法。”  
-“你准备怎么样？”  
-“难道！即使无视长官的命令也要贯彻正义之类的！？然后被坏人抓住吧我懂的。”  
-“那个那个真帆碳，“哼，杀了我吧”这么说说看，可以的话摆出非常不甘心的表情。”  
+“比屋定小姐，研究所通过你来日本的许可了吗？”  
+“……这个啊，申请过好几次，想作为雷斯吉宁教授的助手一起过去，可是都被拒绝了。”  
+“雷斯吉宁教授现在已经到这边了吧？”  
+“嗯，为了调查新型脑炎。”  
+好像是因为这份工作不是关于人工智能的，所以不让真帆同行。  
+“好吧，如果实在行不通，我也有自己的办法。”  
+“你准备怎么做？”  
+“难道是，即使无视长官的命令也要贯彻正义之类的！？然后被坏人抓住……嗯我懂的。  
+ 呐呐真帆碳，来说一句‘哼，杀了我吧！’，尽量摆出非常不甘心的表情。”  
 “哈？”  
-“老爸！”  
-“铃羽摆出了手伸到裤子口袋附近的样子之后。”  
-“抱、抱歉。”  
-“桶子马上头缩了起来并道了歉。”  
-“最近只要这么做，就能阻止桶子无聊的笑话。”  
-“习惯了处理方式这点是好事呢还是可悲的事呢。”  
-“总之，最近会去你们那边。”  
-“知道了，行程决定了就联络我们。”  
-“另外，比屋定小姐，如果要出勤的话，再照一下镜子比较好。”  
-“铃羽对着就要关闭视频聊天的真帆这么忠告道。”  
-“……？”  
-“真帆没有关掉视频聊天就离开了座位，走向壁橱。”  
-“虽然从画面里消失了，但是不久——”  
-“哇啊啊啊！”  
-“大概是看到了自己吓人的样子了吧，回响起不像是女性的惨叫。”  
+“爸爸！”  
+“不、不好意思……”  
+铃羽故意摆出将手伸到裤子口袋附近的动作，桶子马上缩起头道歉。最近铃羽只要这么做，就能阻止桶子的无聊笑话。习惯了这种处理方式，真不知道是好还是可悲。  
+“总之，我最近会去你们那边。”  
+“知道了，行程决定了就联络我们。  
+ 另外，比屋定小姐，上班之前再去照一下镜子比较好。”  
+结束视频聊天之前，铃羽赶紧忠告真帆。  
+“嗯……？”  
+真帆直接离开座位，径直走向衣柜。虽然从画面里消失了，但是不久后——  
+“哇啊啊啊——！”  
+响起了不像是女性的惨叫，大概是终于发现了自己惨不忍睹的模样，并意识到自己正是以这副样子，和其他人视频聊天了这么久吧。  
 
-“结束了视频聊天，休息了一下。”  
-“铃羽大致地回忆了成为时间旅行者之前的自己的记忆。”  
-“和真帆进行视频聊天之后这么做成为了习惯。”  
-“嗯。”  
-“开发时间机器的协助者……比屋定真帆……吗？”  
-真帆瞒着冈部对铃羽和桶子提出协助开发时间机器是在她回到美国之后。那也就意味着，现在到 25 年后桥田至完成时间机器的过程中，比屋定真帆也以某种形式参与其中。但是——  
-“虽然说太多未来的事不太好……但是父亲的同伴中，没有这个名字的人啊。”  
-“唉？是吗？”  
-“也就是说，以某个契机脱离了开发成员这样吧。”  
-“虽然不知道是以自己的意志呢，还是因为其他的外部因素呢。”  
-“至少，不是开发的主要成员。”  
-“是吗，是个相当可靠的人呢。”  
-“……虽然不想这么说……也有可能是哪里的间谍。”  
-“等！？不管怎么说，唯独真帆碳不会这样吧。”  
-“抱歉。”  
-“……但是，只是有这样的可能性这点要记在心里。”  
-“说过了吧，第三次世界大战前的情报战已经开始了。”  
-“……”  
-“不管怎么说，随意地泄露机器的秘密很不好，哪怕只是这点也要好好的注意哦。”  
-“嗯、嗯。”  
+结束了视频聊天，铃羽休息了一下，大致回忆了成为时间旅行者之前的记忆。每次和真帆视频聊天之后，她都会习惯性这么做。  
+“嗯……开发时间机器的协助者……比屋定真帆……”  
+真帆回到美国之后，瞒着冈伦联系了铃羽和桶子，主动提出要协助开发时间机器。那也就意味着，现在到 25 年后，桥田至完成时间机器的过程中，比屋定真帆也以某种形式参与其中。但是——  
+“虽然说太多未来的事不太好……但是爸爸的同伴中，没有这个名字啊。”  
+“诶？是吗？”  
+“也就是说，她在某个时机脱离了开发团队。  
+ 虽然不知道是因为个人意志，还是其他外部因素。  
+ 至少，她不是开发的主要成员。”  
+“是吗？我感觉她是个相当可靠的人啊？”  
+“……虽然不想这么说，她也有可能是哪边的间谍。”  
+“等下！？不管怎么说，真帆碳不可能是吧？”  
+“抱歉……但是，只要有这样的可能性，心里就要有个数。  
+ 我说过吧，第三次世界大战前的情报战已经开始了。”  
+“嗯……”  
+“不管怎么说，时间机器的秘密要是泄露就糟了，所以一定要谨慎。”  
+“唔，嗯。”  
+
 “那么，接下来的时间机器开发准备怎么办？”  
 “嗯——果然没有冈伦的协助的话——”  
-“结果，还是这点啊。冈伦叔叔……果然还是不行吗……”  
-“既然这样，就强行地……”  
-“之前，想这么做却失败的是哪位啊。”  
+“归根到底还是这一点啊。冈伦叔叔……果然还是不行吗……既然这样，就强行……”  
+“之前想这么做，最终失败的是哪位啊？”  
 “……”  
-“铃羽默默地噘起嘴唇。”  
-“冈部伦太郎被枪指着威胁着，也不肯再次乘上时间机器。”  
-“就铃羽来看，老实说已经毫无办法了。忍住了想要叹出的一口大气。不能一直悲观下去了。  
+铃羽默默地噘起嘴唇。冈部伦太郎，即使被枪指着威胁，也不肯再次乘坐时间机器。老实说，铃羽已经毫无办法了。她想要叹气，最终还是忍住了，不能一直悲观下去。  
 
 
 <br/>
