--- a/article/sg0/doc/0040.md
+++ b/article/sg0/doc/0040.md
@@ -1,6 +1,6 @@
 # 私秘境里的污点 - 04
 > 1.129954  
-> [ 1998/夏 铃羽视角 ] 与篝失散的那一天——“听到了神明大人的声音。”  
+> [ 1998/08/13 铃羽视角 ] 与篝失散的那一天——“听到了神明大人的声音。”  
 
 | [←prev](./0039) | [menu](../) | [next→](./0041) |
 
