--- a/article/sg0/doc/0148.md
+++ b/article/sg0/doc/0148.md
@@ -1,6 +1,6 @@
 # 弹性界限的认知 - 04
 > 1.129954  
-> [ 1998/夏 铃羽视角 ] 同 0040。  
+> [ 1998/08/13 铃羽视角 ] 同 0040。  
 
 | [←prev](./0147) | [menu](../) | [next→](./0149) |
 
