桥田桑 --> 桥田先生

--- a/article/sg0/doc/0022.md
+++ b/article/sg0/doc/0022.md
@@ -171,7 +171,7 @@
 “吵架了，离家出走了？”  
 “并不是……”  
 “现在想来，是有些奇怪呢……  
- 作为妈妈的话，却只给桥田桑带了换洗衣服和慰问品，铃羽什么都……”  
+ 作为妈妈的话，却只给桥田先生带了换洗衣服和慰问品，铃羽什么都……”  
 “给爸——哥哥带了换洗衣服，慰问品？”  
 “是的……”  
 铃羽全速思考着，于是终于找到了答案。  
