--- a/article/sg0/doc/0029.md
+++ b/article/sg0/doc/0029.md
@@ -73,14 +73,14 @@
 坐在副驾驶席的下山回过头看着我们再次确认道。  
 “不好意思……”  
 这次，由季很是抱歉地低下了头。  
-“但是你和桥田桑关系很亲密，在交往吧？恋人之间却没有任何联系——”  
+“但是你和桥田先生关系很亲密，在交往吧？恋人之间却没有任何联系——”  
 “手机什么的，现在不是已经用不了了吗？”  
 “也有手机以外的联系方式吧？”  
 “但是，真的什么都……”  
 “他的妹妹也是？”  
 “是的。”  
 
-“话说回来，冈部君和桥田桑好像是在研究什么，对吧？”  
+“话说回来，冈部君和桥田先生好像是在研究什么，对吧？”  
 “诶？”  
 下山突然把矛头指向了我，让我十分慌张。研究？什么研究？糟糕，我这惊慌的样子一定很可疑。  
 “是怎样的研究啊？”  
@@ -95,7 +95,7 @@
  是这样的吧？”  
 “逃走？”  
 糟了，一不留神就反问了，走错一步。但是，桶子和铃羽，在这种混乱的状况下，为什么要避开自卫队，不知去向呢？自卫队在这一个月中，可是拼了命地保护着我，按理说，我们应该主动寻求他们的保护不是吗？局面真的是越来越混乱了。  
-“不知道就算了，桥田桑他们的事情就先到这吧。”  
+“不知道就算了，桥田先生他们的事情就先到这吧。”  
 “……”  
 真希望谁能告诉我正确答案，我在这里应该如何才好？  
 
