--- a/article/sg0/doc/0132.md
+++ b/article/sg0/doc/0132.md
@@ -89,9 +89,9 @@
 “诶……”  
 突然听到玄关传来的声音，不知道什么时候来的由季站在那里。  
 “由季小姐……？”  
-“我从桥田桑那里拿到了这里的钥匙……”  
+“我从桥田先生那里拿到了这里的钥匙……”  
 由季不好意思地把手里的钥匙给我们看。  
-“那个……昨晚，桥田桑和我联络过，感觉他很辛苦的样子，就想拿点慰问品过来……”  
+“那个……昨晚，桥田先生和我联络过，感觉他很辛苦的样子，就想拿点慰问品过来……”  
 由季收起钥匙，稍微提起手上的蛋糕纸袋子给我们看。  
 “……虽然不太清楚情况，但我也想来看看有什么能帮忙的……”  
 “但是，不好把阿万音氏也卷进来……”  
