--- a/article/sg0/doc/0021.md
+++ b/article/sg0/doc/0021.md
@@ -41,7 +41,7 @@
 “我知道。稍微歇一会……”  
 铃羽竭尽最后的力气走到了沙发，瘫在上面，合上双眼。对自己说着，不要慌。  
 “真由喜去拿湿毛巾咯\~”  
-“桥田桑，铃羽小姐的换洗衣服呢？”  
+“桥田先生，铃羽小姐的换洗衣服呢？”  
 “啊，这边，都在里头呢。  
  ——我当然没有在里面哈啊哈啊、闻来闻去的。”  
 “你再说废话，小心我把病毒传染给你，哥！”  
@@ -100,7 +100,7 @@
 上气不接下气的，看来是特意跑着去的。  
 “都怪你平常不运动才这副熊样。”铃羽内心如此叹道。  
 可是……她猛然发觉自己对于这样的父亲感到很开心，慌忙摇了摇头。  
-“一路辛苦，桥田桑。我这正要熬粥呢。等她喝了粥，再喂她吃药。”  
+“一路辛苦，桥田先生。我这正要熬粥呢。等她喝了粥，再喂她吃药。”  
 “*Okey-dokey!* ”  
 桶子边答话，边来到铃羽身边。  
 “感觉怎么样？”  
