--- a/article/sg0/doc/0016.md
+++ b/article/sg0/doc/0016.md
@@ -17,7 +17,7 @@
 “你要坚强些，好好想想真由姐的心情。”  
 闻言，椎名篝抬起沾满泪水的小脸，看向铃羽。  
 “……妈妈？”  
-“都说了别哭了。看着心烦。”  
+“都说了别哭了，看着心烦。”  
 “可是……”  
 铃羽走近篝，接着单膝跪地，让视线与少女持平。不过，她并不想哄她。因为这是为了拯救数十亿人生命的第一项任务。  
 “听好，从现在开始，我会将篝也视为‘瓦尔基里’组织的一员，作为我的部下。  
@@ -68,7 +68,7 @@
 
 [ 2010/12/05 夜 ] 
 
-从 LAB 里出来之后，铃羽照例在秋叶原各处完成了自己的任务，现在正在 2010 年的广播会馆楼顶望着身下的街道夜景。已经过了晚饭的时间了，在街上散步的人不少。  
+从 LAB 出来之后，铃羽照例在秋叶原各处完成了自己的任务，现在正在 2010 年的广播会馆楼顶望着身下的街道夜景。已经过了晚饭的时间了，在街上散步的人不少。  
 “35 年……了吗……”  
 现实世界中，在这么长的时间之前，铃羽曾在同样的场所与篝交谈。然而就铃羽的体感时间而言，那不过是数个月之前的事。从这里俯瞰的景色同那时相比变化已经相当大了。今后的 26 年里，将会再次剧变。自己时机见证了这栋楼 61 年的变迁。与其说感慨万千，不如说，铃羽体会到了与他人生活在不同时间中的恐惧与孤独感。  
 “利用时间机器来改变世界线，意味着脱离这个宇宙的组成原理。”  
