--- a/article/sg0/doc/0126.md
+++ b/article/sg0/doc/0126.md
@@ -125,9 +125,9 @@
 他就这样不再动弹了。  
 “啊……啊啊……”  
 “怎么……会这样……”  
-“……太好了，琉华君，一直想见冈伦呢。最后能见上一面，真的是，太好了……”  
-太好了……？这叫太好了……？这种结局 ……？真由理这句话，终于让我明白了，在我沉睡的这 25 年里，他们到底经历了多么残酷的、犹如地狱般的时间。  
-“漆原琉华……你刚刚的战斗，真的很出色……我们，被你救了……谢谢你，请安息吧……”  
+“……太好了，琉华君一直想见冈伦呢。最后能见上一面，真的是，太好了……”  
+太好了……？这叫太好了？这种结局？真由理这句话，终于让我明白了，在我沉睡的这 25 年里，他们到底经历了多么残酷的、犹如地狱般的时间。  
+“漆原琉华……你刚刚的战斗，真的很出色……我们，因为你得救了……谢谢你，请安息吧……”  
 “咕……这种、这种事，太过分了……  
  呜……啊啊啊啊啊啊啊啊——!”  
 
