--- a/article/sg0/doc/0012.md
+++ b/article/sg0/doc/0012.md
@@ -46,8 +46,8 @@
 桥田至在冈部伦太郎不再跨入这间未来道具研究所之后，仍然独自进行着时间机器的研发工作。铃羽对他的工作一概保持沉默。因为一旦插嘴，就难免会产生时间悖论。  
 “就算为了制造时间机器，也不能调查未来的时间机器，明白了吗？”  
 铃羽再次警告父亲。  
-“我知道那些。可我有时会没自信。我当真能够做出时间机器吗？”  
-“当然了。振作起来！”  
+“我知道，可我有时会没自信，我当真能够做出时间机器吗？”  
+“当然了，振作起来！”  
 “好……”  
 铃羽放下了顶在父亲后脖子上的那个啫喱喷雾。  
 “喂！我真心以为是枪没想到被摆了一道！骗爸爸太不厚道了！”  
@@ -57,13 +57,13 @@
 “要是漫画或游戏里，责怪父亲的女儿应该这样，萌得爆表——  
  铃羽铃羽，那个，你能不能说，  
  ‘矮油，爸拔不要啦’？最好用撒娇的口气——  
- 这话当我没说是也……”  
+ 呃，这话当我没说是也……”  
 被铃羽恶狠狠地一瞪，桶子立马怂了。  
 “唉……”  
 铃羽长叹一口气，一屁股坐在沙发上，靠着靠背，仰着脖子，闭上双眼。  
 “怎么啦？”  
 “没事……”  
-“别瞒着我。你的‘没事’准是‘有话要讲’的意思。”  
+“别瞒着我，你的‘没事’准是‘有话要讲’的意思。”  
 “诶？”  
 “来，说来听听。”  
 父亲的语气极为正经。铃羽惊讶地瞪大了眼睛，可马上就转过神来。  
@@ -74,7 +74,7 @@
 “爸爸，我奉劝你，不要妄想着‘攻略我’！”  
 “才没有！我怎么会对亲生女儿那样呢！”  
 “是吗？未来的你可是有点怪怪的哦？  
- 我进了青春期，你也是经常要拉我一起洗澡……”  
+ 我到了青春期，你还是经常要拉我一起洗澡……”  
 “你可别吓死爸爸……”  
 “虽说我是军队编制，爸爸也在夜以继日地研发时间机器，不能随时团聚……  
  总之你太黏着我了，简直郁闷。”  
@@ -82,13 +82,13 @@
 “爸爸你呀，总是对我讲，  
  这条世界线虽然恶劣透顶，但我的出生却是最棒的。  
  我不想让未来的爸爸失望。所以我必须说服冈伦叔叔……”  
-“没事的，我不会失望的，绝对的。”  
+“没事的，我不会失望的，绝对。”  
 “是吗？”  
 “嗯。”  
 “可是呀，冈伦叔叔他……就是不肯听我一句……  
  这样下去，冈伦叔叔就不会回到过去；  
  他拯救不了牧濑红莉栖，也就无法抵达命运石之门……”  
-命运石之门（*Steins;Gate*），那是 2036 年的父亲告诉自己的，第三次世界大战也许不会发生的“未知世界线”。要将冈部伦太郎指引向那条世界线，正是阿万音铃羽必须完成的使命。然而，到现在却进展不顺……铃羽来到了 2010 年，曾经按照计划，成功地将冈部伦太郎带回了 7 月 28 日。但是冈部伦太郎却**搞砸**了，于是他再也不愿意站起来了。铃羽每次遇见他就会尝试劝他回心转意，然而他能不能听进去……不好说。  
+命运石之门（*Steins;Gate*），那是 2036 年的父亲告诉自己的，第三次世界大战也许不会发生的“未知世界线”。要将冈部伦太郎指引向那条世界线，正是阿万音铃羽必须完成的使命。然而，到现在却进展不顺……铃羽来到了 2010 年，曾经按照计划，成功地将冈部伦太郎带回了 7 月 28 日。但是冈部伦太郎却搞砸了，于是他再也不愿意站起来了。铃羽每次遇见他就会尝试劝他回心转意，然而他能不能听进去……不好说。  
 “到头来，世界收束到第三次世界大战，死了很多人……  
  我明明是为了改变这些才来的，难道我办不到吗……”  
 
@@ -109,7 +109,7 @@
 “话说啊，现在放弃还太早了，再稍微努力看看吧。  
  冈伦可能只是累得睡着了而已。  
  像刚刚那样，拿冰镇 Dr. Pepper 顶到他的脖子上，就会跳起来了吧。  
- 毕竟你看，是**那个**冈伦啊。”  
+ 毕竟你看，他是冈伦啊。”  
 “……嗯。”  
 明白这是父亲式的鼓励，铃羽点了点头。  
 
@@ -120,7 +120,7 @@
 “*Okey-dokey!*”  
 铃羽的动作非常快，可能比刚才制服父亲还更快些。毫不发出任何响动，铃羽冲进了 LAB 最里面的开发室，帘子之后的狭小空间。差不多在铃羽钻到桌子底下的同时，LAB 的门被敲响了。  
 “你好\~”  
-那个声音铃羽当然也很熟悉——果然是**母亲**。同时铃羽也能分辨得出，父亲已经手忙脚乱了。咚咚的敲门声继续响起。  
+那个声音铃羽当然也很熟悉——果然是**妈妈**。同时铃羽也能分辨得出，父亲已经手忙脚乱了。咚咚的敲门声继续响起。  
 “真由理酱？”  
 “啊——来了来了，马上开门哦！”  
 桶子打开了门。铃羽做了个深呼吸，然后集中精神。她想起了曾经在战场狙击猎物的时候，三天三夜不吃不喝架着步枪一直等待的事情。把自己的气息完全消除，让呼吸变得更慢——爸爸，好好干哟。  
@@ -130,11 +130,11 @@
 沙啦沙啦的声音，是塑料袋，大概是准备的一些食材吧。  
 “真由喜还没来呢。”  
 “这样吗？可能稍微来早了点吧。”  
-阿万音由季，就像“阿万音”这个姓氏一样一目了然，她是铃羽**未来的母亲**。也就是说，现在房间里这样对话的两人，按照预定的话总有一天会结为夫妻的。  
+阿万音由季，就像“阿万音”这个姓氏一样一目了然，她是铃羽**未来的母亲**。也就是说，现在房间里这样对话的两人，按照预定总有一天会结为夫妻。  
 “嘛，有约的话应该过一会儿就来了吧。”  
 “我可以在这里等吗？”  
 “那是当然的。准备在这里做料理的吗？”  
-“是的，桥田桑也请务必尝尝味道。”  
+“是的，桥田先生也请务必尝尝味道。”  
 “真由喜的……并不怎么想吃哦……”  
 “没问题的哟\~真由理酱已经很拿手了。”  
 “嘿……嘿嘿……”  
@@ -148,59 +148,55 @@
 “嗯！很好！非常好！”  
 “真的吗？”  
 “唔哈，天使 ktkr！这样的感觉。”  
-“谢谢。桥田桑也打扮一下吧？稍微瘦一点的话，我想就相当棒的哦！”  
+“谢谢。桥田先生也打扮一下吧？稍微瘦一点的话，我想就相当棒的哦！”  
 “唔哈哈……”  
 “我是说真的哟\~”  
 “哦……哦！”  
 桥田至和阿万音由季，两人颇有些生硬地对话着。  
 
-“桥田桑，吸尘器在哪？”  
+“桥田先生，吸尘器在哪？”  
 由季四处寻找着吸尘器，逐渐靠近铃羽藏身的开发室。  
 “呃……就在那个幕帘后面——啊！危险！”  
 “这后面？”  
 “啊——我来拿好了！”  
-差点暴露而突然反应过来的桶子阻止了由季，连忙进入了开发室内。在拿地板上的吸尘器的时候，跟躲在桌子下的铃羽视线相交。  
+差点暴露而突然反应过来的桶子阻止了由季，连忙进入了开发室内。蹲下拿地板上的吸尘器时，对上了躲在桌子下的铃羽的视线。  
 “（悄声）别暴露了啊，爸爸。”  
 “（悄声）*Okey-dokey!*”  
-“桥田桑，吸尘器在里面吗？”  
+“桥田先生，吸尘器在里面吗？”  
 “啊……嗯，嗯！”  
-看起来由季应该是没有发现的样子，在房间里开始了打扫。确实在早上的时候，房间里就已经比较乱了，以由季的性格这时候忍不住要打扫对于铃羽来说是很容易猜到的。  
-桶子把地板上放着的那个像是吸尘器一样的东西拿到以后走出了开发室。  
-“是什么啊，那个？”  
-“未来道具 5 号机——  
- 分解开的话，应该是可以当作普通吸尘器来用的。”  
-“明明是为了打扫用的吸尘器，要是还需要分解开的话，不会反而让房间变得更乱吗？”  
+看起来由季应该还没有发觉，开始打扫房间。早上房间就已经比较乱了，以由季的性格这时候一定忍不住要打扫，这对于铃羽来说是很容易猜到的。  
+桶子拿着那个像是吸尘器一样的东西走出了开发室。  
+“那个是什么？”  
+“未来道具 5 号机——拆开的话，应该是可以当作普通吸尘器来用的。”  
+“明明是为了打扫用的吸尘器，要是还需要拆开的话，不会反而让房间变得更乱吗？”  
 “啊呜……”  
-“哈哈哈，桥田桑虽然头脑那么聪明，有时候也会这么笨笨的呢！”  
-“是，是嘛……”  
+“哈哈哈，桥田先生虽然头脑那么聪明，有时候也会这么笨笨的呢！”  
+“是、是嘛……”  
 “但是，我更喜欢这样的人啊。”  
 “神……神马？”  
 在桶子这么动摇着的时候，铃羽也跟着叹了一口气。  
 “不过，我想生活上还是改一改的比较好。  
  可以的话还是每天都打扫房间比较好哟，这里看起来灰尘格外多。  
- 除此之外，饮食上也要格外注意。今天也是只吃了杯面是吧？”  
-“为，为什么会知道！？”  
-“厨房那边，吃完的就放在那了。”  
+ 除此之外，饮食上也要格外注意。你今天也是只吃了杯面吧？”  
+“为、为什么会知道！？”  
+“厨房那边，吃完就放在那了。”  
 “原来如此。”  
-“还有还有，居然有这么多的零食。不是一直都叫你别吃这么多了嘛！”  
+“还有还有，居然有这么多的零食，不是一直都叫你别吃这么多嘛！”  
 “姑且，还是有在注意的……”  
-“姑且可不行。老是吃那么多的方便面跟零食的话会生病的哟。  
+“姑且可不行，老是吃那么多方便面跟零食的话会生病的哟。  
  还有，尽量的也要运动运动”。  
 ……  
-刚才铃羽说要注意的那些地方，阿万音由季也一样不差地说到了。果然是母女啊……  
-这时，正在稍微怀念着家的感觉的铃羽，注意到了新的来访者的气息。  
+刚才铃羽说要注意的那些地方，阿万音由季也一样不差地说到了，不亏是母女啊……这时，正在稍微怀念着家的感觉的铃羽，注意到了新的来访者的气息。  
 
 “嘟嘟噜\~♪”  
 玄关的门打开后，房间里响起了早已听惯的问候。  
 “不好意思呢，由季，稍微有点迟到了\~”  
-是跟阿万音由季约好在这里会合的椎名真由理。  
-但是，不只是她，还有一个人的气息存在着。  
+是跟阿万音由季约好在这里会合的椎名真由理。不只是她，还存在另一个人的气息。  
 “真由理酱，你好啊\~冈部先生也在一起啊\~”  
-“哦，冈伦啊。好久不见！”  
+“哦，冈伦啊，好久不见！”  
 “啊啊……好久不见。”  
 
-听到了这个声音，铃羽不自觉咬紧了牙齿。  
-脑海中此刻浮现出的，是和父亲最后告别时候的记忆。  
+听到了这个声音，铃羽不自觉咬紧了牙齿。脑海中此刻浮现出的，是和爸爸最后告别时的记忆。  
 
 
 <br/>
